--- a/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
@@ -75,8 +75,8 @@ MAF_DEM_market_liberal_party:0 "신 개혁파"
 MAF_DEM_market_liberal_party_long:0 "신 개혁파"
 MAF_DEM_social_conservative_party:0 "백색 아프리카당"
 MAF_DEM_social_conservative_party_long:0 "백색 아프리카당"
-MAF_DEM_authoritarian_democrat_party_long:0 "Kaiser- und Vaterlandspartei"
-MAF_DEM_authoritarian_democrat_party:0 "KVP"
+MAF_DEM_authoritarian_democrat_party_long:0 "카이저와 조국당"
+MAF_DEM_authoritarian_democrat_party:0 "카이저와 조국당"
 MAF_DEM_paternal_autocrat_party:0 "아프리카 행동당"
 MAF_DEM_paternal_autocrat_party_long:0 "아프리카 행동당"
 
@@ -176,7 +176,7 @@ MAF_Airforce_Infantry:0 "항공기동부대의 창설"
 MAF_Airforce_Infantry_desc:0 "독일 식민 단체 행정부의 주요 구성원 중 한 명인 루드비히 폰 보크 홀트(Ludwig von Bockholt)는 항상 공중전에서 대담한 혁신가였습니다. 그의 최신 혁신 : 항공 배치 및 전 부문의 보급."
 MAF_Improve_Logistics:0 "군수 보급의 향상"
 MAF_Improve_Logistics_desc:0 "세계대전이 진행되는 동안 18,000명의 병력에게 공급하기 위해 200,000명 이상의 포터가 필요했습니다. 이것은 식량을 쏟아 내고 인간이 포병을 운반할 수 있는 속도로 이동성을 줄였습니다. 우리는 이 일이 다시 일어나도록 허용할 수 없습니다."
-MAF_Spirit_Vorbeck:0 "폰 레토프-포어벡의 정신"
+MAF_Spirit_Vorbeck:0 "폰 레토프-포어베크의 정신"
 MAF_Spirit_Vorbeck_desc:0 "The most important lesson of the Weltkrieg cannot be found in any technical manual. It is exemplified in the sheer determination of General von Lettow-Vorbeck to continue fighting no matter how dire the situation might have appeared. In 1916, the Entente declared the situation in Africa over. In 1921 we were still standing, and still fighting. We never gave up, and we never will!"
 MAF_Electronic_Project:0 "전자정보 계획"
 MAF_Electronic_Project_desc:0 "Mittelafrika is not suited for a large navy, our shores are too large to protect and our industry would be better spent on other things. One such other thing is investment in electronics technology, which will give us the ability to project power from Africa and help our Fatherland through intelligence gathering."
@@ -192,11 +192,11 @@ MAF_Reform_Schutztruppe:0 "식민지 방위군 개혁"
 MAF_Reform_Schutztruppe_desc:0 "For too long our Schutztruppe have operated in military fashion despite not being part of the German military. Though they displayed outstanding bravery during the Weltkrieg, they are a police force, not an occupying army. It's time they acted like it."
 MAF_Autonomous_Kingdoms:0 "자치 왕국"
 MAF_Autonomous_Kingdoms_desc:0 "Some areas of Africa are not suitable for white settlement, and our rule is particularly dependent on the good will of local rulers. Rather than trying to coordinate, we should grant them greater independence and autonomy, though naturally with ourselves as suzerain."
-MAF_Restore_British_Selfrule:0 "영국인들의 자치를 부활시키다"
+MAF_Restore_British_Selfrule:0 "영국인들의 자치를 부활"
 MAF_Restore_British_Selfrule_desc:0 "Integrating the British into our parliament is a nightmare. They do not have German citizenship, so they cannot vote, but the British have a deep love of parliamentarianism and shall resent their comparative privileges. We should instead restore some measure of self rule to these people, as part of our trusteeship to restore responsible government to these territories."
 MAF_Hold_Elections:0 "선거를 개최하다"
 MAF_Hold_Elections_desc:0 "It is time to hold Mittelafrika's first ever elections. They shall commence in about half a year, after all the parties have had time to campaign."
-MAF_Deal_With_Europeans:0 "유럽인들과 담판을 짓다"
+MAF_Deal_With_Europeans:0 "유럽인들과의 담판"
 MAF_Deal_With_Europeans_desc:0 "The Belgian and British citizens of our colony are very disproportionally influential, and it is time we deal with them one way or another."
 MAF_Block_FW_Investment:0 "플란데런계 투자를 막다"
 MAF_Block_FW_Investment_desc:0 "For too long the Flemish and Walloons have played a disproportionately large role in the economy of our colony. We should take measures to ensure only German companies have access to these opportunities."
@@ -204,27 +204,27 @@ MAF_Seize_FW_Industries:0 "플란데런계 산업을 접수하다"
 MAF_Seize_FW_Industries_desc:0 "Now that we've broken the power of Flemish-Walloon capital, their investors are eager to leave. We can seize upon any excuse we want to claim their industries as our own, or purchase them for a paltry sum."
 MAF_Expel_Alien_Nationals:0 "이질적인 민족들을 내쫓다"
 MAF_Expel_Alien_Nationals_desc:0 "Unlike the British, the Flemish-Walloons rarely come here to settle. Most of them are technicians and skilled labourers who work here and then simply return to Europe to be later replaced by their fellow countrymen. Therefore, it is much easier to simply deport them back to Flanders-Wallonia."
-MAF_Attract_Belgian_Investment:0 "플란데런의 투자를 유도하다"
+MAF_Attract_Belgian_Investment:0 "플란데런의 투자 유도"
 MAF_Attract_Belgian_Investment_desc:0 "The Flemish-Walloons have been here long before us as a colonial power, and they've never really left. We have a comfortable and working relationship with numerous mining firms who have actually expanded beyond their original holdings in the Kongo. If we continue this policy, we can reap the benefits of their capital."
 MAF_Grant_Cons_FW:0 "플란데런계 자원 회사들"
 MAF_Grant_Cons_FW_desc:0 "By granting the Flemish-Walloon conglomerates autonomy and security rights over remote streches of the Congo, we can ensure a more disciplined workforce."
 MAF_Intergrate_FW:0 "플란데런계 장교들을 통합하다"
 MAF_Intergrate_FW_desc:0 "We fought against them in the Weltkrieg, but now the people of Flanders and Wallonia are our allies. Many of their officers have experience with commanding troops in Africa. We can use them."
-MAF_Deal_With_Belgians:0 "플란데런-우알로니계와 담판을 짓다"
+MAF_Deal_With_Belgians:0 "플란데런-우알로니계와의 담판"
 MAF_Deal_With_Belgians_desc:0 "Now that we have dealt with the Flandro-Wallonians and their ACC, it is time to make our arrangement with them permanent."
-MAF_Disarm_Anglos:0 "영국계 치안유지 병력을 무장해제하다"
+MAF_Disarm_Anglos:0 "영국계 치안유지 병력 무장해제"
 MAF_Disarm_Anglos_desc:0 "Even before our arrival, the British populations of Kenya and Northern Rhodesia worked to ensure their security through 'rifle clubs', auxiliary police associations and paramillitaries. Participation rates have increased since our occupation, and so we must break up these groups if we are to truly rule the British territories."
-MAF_Remove_Brit_Service:0 "공무원 조직에서 영국계를 없애다"
+MAF_Remove_Brit_Service:0 "공무원 조직에서 영국계를 제거"
 MAF_Remove_Brit_Service_desc:0 "Positions in the former British colonies are often staffed by Swahilli-speaking Britons. We should endeavour to drive them out and fully Germanise the administration."
 MAF_German_Education_Brits:0 "아이들에 대한 독일어 교육"
 MAF_German_Education_Brits_desc:0 "Growing off the base of our colony in East Africa, the official language of our administration is Swahilli, not German. This has allowed the British to maintain the use of their original languages by using Swahilli only when dealing with our administration. By instituting mandatory German education, we can Germanise the British population."
-MAF_Support_Anglos:0 "공식적으로 영국계 치안유지 병력을 지원하다"
+MAF_Support_Anglos:0 "영국계 치안유지 병력 공식 지원"
 MAF_Support_Anglos_desc:0 "While some may see the militarisation of the British settlers as a threat, we see it as an opportunity. A large armed, conservative and white population can reinforce our rule and protect against native uprisings. We should grant our official blessing to these organisations."
-MAF_Intergrate_Anglos:0 "영국계 치안유지 병력을 통합하다"
+MAF_Intergrate_Anglos:0 "영국계 치안유지 병력 통합"
 MAF_Intergrate_Anglos_desc:0 "We can reduce discontent in our British trusteeships by offering their officers commisions in our forces at an equivalent rank. They will feel less like a subject population, and we get a wealth of well trained officers."
 MAF_Canadian_Volunteers:0 "캐나다인 자원병"
 MAF_Canadian_Volunteers_desc:0 "While we have integrated the British into our forces, some more patriotic members are eager to retake their home island. Since we're co-belligerents against the socialists, we should encourage them, and allow the training of a few divisions for frontline duty."
-MAF_Deal_With_British:0 "영국인들과 담판을 짓다"
+MAF_Deal_With_British:0 "영국계와의 담판"
 MAF_Deal_With_British_desc:0 "Now that we have dealt with the British and their RVA, it is time to make our arrangement with them permanent."
 MAF_Black_Monday:0 "검은 월요일 수정"
 MAF_Black_Monday_desc:0 "In light of this unprecedented economic crisis, we can expect all kinds of economic setbacks..."
