--- a/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
@@ -7,6 +7,7 @@ l_english:
 ###################################################################################################################################
 
 VICTORY_POINTS_TOOLTIP:0 "§G$NAME$§! 승점 점수 = §Y$POINTS$§!"
+VICTORY_POINTS_94:0 "벨로모르스크"
 VICTORY_POINTS_117:0 "노보그라드"
 VICTORY_POINTS_121:0 "야로슬라볼"
 VICTORY_POINTS_122:0 "베르겐"
@@ -24,24 +25,33 @@ VICTORY_POINTS_321:0 "로스토크"
 VICTORY_POINTS_322:0 "노리치"
 VICTORY_POINTS_331:0 "바브루이스크"
 VICTORY_POINTS_351:0 "뉴캐슬"
+VICTORY_POINTS_357:0 "이바노보"
 VICTORY_POINTS_362:0 "단치히"
 VICTORY_POINTS_377:0 "카디프"
+VICTORY_POINTS_382:0 "칼루가"
 VICTORY_POINTS_383:0 "예테보리"
 VICTORY_POINTS_385:0 "데리"
 VICTORY_POINTS_391:0 "암스테르담"
+VICTORY_POINTS_392:0 "심비르스크"
 VICTORY_POINTS_407:0 "스완지"
 VICTORY_POINTS_413:0 "보로네시"
 VICTORY_POINTS_418:0 "하르키우"
+VICTORY_POINTS_453:0 "파블로흐라드"
 VICTORY_POINTS_454:0 "아미앵"
+VICTORY_POINTS_471:0 "모힐리우포딜스키"
+VICTORY_POINTS_488:0 "체르카시"
 VICTORY_POINTS_495:0 "도르트문트"
+VICTORY_POINTS_511:0 "폴타바"
 VICTORY_POINTS_512:0 "오클레앙"
 VICTORY_POINTS_514:0 "드레스덴"
 VICTORY_POINTS_516:0 "브뤼셀"
+VICTORY_POINTS_523:0 "스타로빌스크"
 VICTORY_POINTS_525:0 "키예프"
 VICTORY_POINTS_526:0 "브라운슈바이크"
 VICTORY_POINTS_537:0 "쿠스트린"
 VICTORY_POINTS_540:0 "플리머스"
 VICTORY_POINTS_541:0 "니트러"
+VICTORY_POINTS_556:0 "톈수이시"
 VICTORY_POINTS_564:0 "카셀"
 VICTORY_POINTS_575:0 "되윙케르커"
 VICTORY_POINTS_587:0 "쾰른"
@@ -58,6 +68,7 @@ VICTORY_POINTS_692:0 "뮌헨"
 VICTORY_POINTS_708:0 "아우크스부르크"
 VICTORY_POINTS_719:0 "노보로시스크"
 VICTORY_POINTS_733:0 "콩코드"
+VICTORY_POINTS_737:0 "헤르손"
 VICTORY_POINTS_740:0 "빌바오"
 VICTORY_POINTS_748:0 "스타브로폴"
 VICTORY_POINTS_758:0 "라코루냐"
@@ -136,7 +147,7 @@ VICTORY_POINTS_1467:0 "슈샤"
 VICTORY_POINTS_1468:0 "더반"
 VICTORY_POINTS_1488:0 "치앙마이"
 VICTORY_POINTS_1492:0 "만달레이"
-VICTORY_POINTS_1536:0 "주보프카"
+VICTORY_POINTS_1536:0 "시르반"
 VICTORY_POINTS_1550:0 "산티아고데쿠바"
 VICTORY_POINTS_1562:0 "샌디에고"
 VICTORY_POINTS_1563:0 "빡쎄"
@@ -158,15 +169,19 @@ VICTORY_POINTS_1719:0 "세인트폴"
 VICTORY_POINTS_1747:0 "래피드시티"
 VICTORY_POINTS_1751:0 "아조레스"
 VICTORY_POINTS_1770:0 "디모인"
+VICTORY_POINTS_1794:0 "바르나울"
+VICTORY_POINTS_1803:0 "브라츠크"
 VICTORY_POINTS_1806:0 "털사"
 VICTORY_POINTS_1814:0 "웰링턴"
 VICTORY_POINTS_1821:0 "예카테린부르크"
 VICTORY_POINTS_1827:0 "덴버"
+VICTORY_POINTS_1828:0 "예니세이스크"
 VICTORY_POINTS_1834:0 "뫼렌"
 VICTORY_POINTS_1836:0 "비즈마크"
 VICTORY_POINTS_1843:0 "마이애미"
 VICTORY_POINTS_1847:0 "낸장"
 VICTORY_POINTS_1866:0 "미니애폴리스"
+VICTORY_POINTS_1884:0 "위수"
 VICTORY_POINTS_1887:0 "비야비센시오"
 VICTORY_POINTS_1891:0 "소코토"
 VICTORY_POINTS_1896:0 "타브리즈"
@@ -185,6 +200,7 @@ VICTORY_POINTS_1981:0 "시우다드과야나"
 VICTORY_POINTS_1984:0 "곤다르"
 VICTORY_POINTS_1990:0 "치앙라이"
 VICTORY_POINTS_1997:0 "메리다"
+VICTORY_POINTS_2015:0 "카슈가르"
 VICTORY_POINTS_2023:0 "메델린"
 VICTORY_POINTS_2024:0 "룰라부르크"
 VICTORY_POINTS_2026:0 "이스파한"
@@ -227,20 +243,26 @@ VICTORY_POINTS_3150:0 "던디"
 VICTORY_POINTS_3151:0 "페트로그라드"
 VICTORY_POINTS_3152:0 "레발"
 VICTORY_POINTS_3211:0 "덴하그"
+VICTORY_POINTS_3230:0 "프워츠크"
 VICTORY_POINTS_3273:0 "글래스고"
 VICTORY_POINTS_3284:0 "포트오브스페인"
 VICTORY_POINTS_3295:0 "토룬"
+VICTORY_POINTS_3309:0 "슬로님"
 VICTORY_POINTS_3320:0 "빌뉴스"
 VICTORY_POINTS_3325:0 "오덴세"
 VICTORY_POINTS_3326:0 "브레멘"
 VICTORY_POINTS_3335:0 "브랸스크"
 VICTORY_POINTS_3338:0 "아르한겔스크"
+VICTORY_POINTS_3344:0 "토로페츠"
+VICTORY_POINTS_3346:0 "리페츠크"
 VICTORY_POINTS_3369:0 "브리스톨"
 VICTORY_POINTS_3379:0 "벨파스트"
 VICTORY_POINTS_3380:0 "엘빙"
 VICTORY_POINTS_3392:0 "베레스티야"
 VICTORY_POINTS_3393:0 "흐르드나"
 VICTORY_POINTS_3456:0 "카라치"
+VICTORY_POINTS_3457:0 "프로스쿠리우"
+VICTORY_POINTS_3472:0 "튜멘"
 VICTORY_POINTS_3501:0 "도버"
 VICTORY_POINTS_3509:0 "르망"
 VICTORY_POINTS_3513:0 "포틀랜드"
@@ -252,18 +274,21 @@ VICTORY_POINTS_3535:0 "라이프치히"
 VICTORY_POINTS_3544:0 "바르샤바"
 VICTORY_POINTS_3550:0 "에페리에시"
 VICTORY_POINTS_3552:0 "브레스트"
+VICTORY_POINTS_3568:0 "체르니히우"
 VICTORY_POINTS_3569:0 "브르노"
 VICTORY_POINTS_3578:0 "사라토프"
 VICTORY_POINTS_3580:0 "쿠르스크"
 VICTORY_POINTS_3586:0 "쳉스토호바"
 VICTORY_POINTS_3594:0 "비시"
 VICTORY_POINTS_3617:0 "노비사드"
+VICTORY_POINTS_3618:0 "구리예프"
 VICTORY_POINTS_3651:0 "나팔리"
 VICTORY_POINTS_3652:0 "디종"
 VICTORY_POINTS_3653:0 "바투미"
 VICTORY_POINTS_3655:0 "부르주"
 VICTORY_POINTS_3658:0 "쿠타이시"
 VICTORY_POINTS_3663:0 "플로이에슈티"
+VICTORY_POINTS_3668:0 "포트페트로프스크"
 VICTORY_POINTS_3671:0 "투르"
 VICTORY_POINTS_3672:0 "그로즈니"
 VICTORY_POINTS_3686:0 "세바스토폴"
@@ -284,6 +309,7 @@ VICTORY_POINTS_3816:0 "사라고사"
 VICTORY_POINTS_3823:0 "리치먼드"
 VICTORY_POINTS_3834:0 "투손"
 VICTORY_POINTS_3838:0 "아작시오"
+VICTORY_POINTS_3843:0 "카멘류볼로프"
 VICTORY_POINTS_3878:0 "뉴욕"
 VICTORY_POINTS_3882:0 "스코페"
 VICTORY_POINTS_3920:0 "레옹"
@@ -296,8 +322,8 @@ VICTORY_POINTS_3986:0 "톨레도"
 VICTORY_POINTS_3992:0 "난창"
 VICTORY_POINTS_3995:0 "사이판"
 VICTORY_POINTS_3999:0 "하카"
-VICTORY_POINTS_4050:0 "후이저우"
 VICTORY_POINTS_4014:0 "카타리나"
+VICTORY_POINTS_4050:0 "후이저우"
 VICTORY_POINTS_4052:0 "헤이조" #평양
 VICTORY_POINTS_4056:0 "부산" #부산/부산
 VICTORY_POINTS_4075:0 "하노이"
@@ -367,13 +393,17 @@ VICTORY_POINTS_4639:0 "캄퐁참"
 VICTORY_POINTS_4641:0 "포르토프랭스"
 VICTORY_POINTS_4652:0 "메단"
 VICTORY_POINTS_4654:0 "로이코"
+VICTORY_POINTS_4682:0 "악수"
+VICTORY_POINTS_4690:0 "미누신스크"
 VICTORY_POINTS_4696:0 "포트 엘리자베스"
 VICTORY_POINTS_4704:0 "쿠물"
 VICTORY_POINTS_4709:0 "디화"
 VICTORY_POINTS_4723:0 "샤이엔"
 VICTORY_POINTS_4724:0 "크라스노야르스크"
+VICTORY_POINTS_4728:0 "페트로파블롭스크"
 VICTORY_POINTS_4739:0 "새스커툰"
 VICTORY_POINTS_4745:0 "하이라얼"
+VICTORY_POINTS_4781:0 "울랄라"
 VICTORY_POINTS_4797:0 "이르쿠츠크"
 VICTORY_POINTS_4799:0 "라스베가스"
 VICTORY_POINTS_4801:0 "우르가"
@@ -391,6 +421,7 @@ VICTORY_POINTS_4948:0 "다카르"
 VICTORY_POINTS_4952:0 "베넹스타드"
 VICTORY_POINTS_4953:0 "주발푸르"
 VICTORY_POINTS_4956:0 "산루이스포토시주"
+VICTORY_POINTS_4973:0 "호탄"
 VICTORY_POINTS_4982:0 "조지타운"
 VICTORY_POINTS_4987:0 "카트만두"
 VICTORY_POINTS_4997:0 "마이두구리"
@@ -428,6 +459,9 @@ VICTORY_POINTS_6039:0 "부에아"
 VICTORY_POINTS_6050:0 "스톡홀름"
 VICTORY_POINTS_6103:0 "런던"
 VICTORY_POINTS_6115:0 "오슬로"
+VICTORY_POINTS_6124:0 "뱟카"
+VICTORY_POINTS_6217:0 "이젭스크"
+VICTORY_POINTS_6232:0 "마지르"
 VICTORY_POINTS_6237:0 "노팅엄"
 VICTORY_POINTS_6245:0 "티버"
 VICTORY_POINTS_6262:0 "툴라"
@@ -442,16 +476,20 @@ VICTORY_POINTS_6332:0 "쾨니히스베르크"
 VICTORY_POINTS_6338:0 "카잔"
 VICTORY_POINTS_6363:0 "뱅거"
 VICTORY_POINTS_6364:0 "오르후스"
+VICTORY_POINTS_6371:0 "폴렉"
 VICTORY_POINTS_6377:0 "하노버"
 VICTORY_POINTS_6380:0 "모스크바"
 VICTORY_POINTS_6384:0 "리버풀"
 VICTORY_POINTS_6389:0 "키엘"
 VICTORY_POINTS_6418:0 "플젠"
+VICTORY_POINTS_6436:0 "자가탈라"
 VICTORY_POINTS_6449:0 "셰르부르크"
 VICTORY_POINTS_6469:0 "에센"
 VICTORY_POINTS_6474:0 "유지프카"
 VICTORY_POINTS_6488:0 "프랑크푸르트"
+VICTORY_POINTS_6490:0 "치먈란스크"
 VICTORY_POINTS_6496:0 "에인트호번"
+VICTORY_POINTS_6506:0 "카미신"
 VICTORY_POINTS_6521:0 "베를린"
 VICTORY_POINTS_6524:0 "에르푸르트"
 VICTORY_POINTS_6526:0 "트루로"
@@ -484,6 +522,7 @@ VICTORY_POINTS_6710:0 "디트로이트"
 VICTORY_POINTS_6711:0 "콜로즈바르"
 VICTORY_POINTS_6720:0 "죄르"
 VICTORY_POINTS_6727:0 "체타테아알버"
+VICTORY_POINTS_6730:0 "키즐랴르"
 VICTORY_POINTS_6732:0 "보스턴"
 VICTORY_POINTS_6766:0 "툴루즈"
 VICTORY_POINTS_6769:0 "랜싱"
@@ -491,6 +530,7 @@ VICTORY_POINTS_6780:0 "토리노"
 VICTORY_POINTS_6786:0 "생테티엔"
 VICTORY_POINTS_6788:0 "제노아"
 VICTORY_POINTS_6790:0 "파르마"
+VICTORY_POINTS_6794:0 "옐리스타"
 VICTORY_POINTS_6831:0 "페스카라"
 VICTORY_POINTS_6845:0 "필라데피아"
 VICTORY_POINTS_6855:0 "콜럼버스"
@@ -500,6 +540,7 @@ VICTORY_POINTS_6890:0 "클리블랜드"
 VICTORY_POINTS_6906:0 "발렌치아"
 VICTORY_POINTS_6907:0 "살라망카"
 VICTORY_POINTS_6923:0 "플로브디프"
+VICTORY_POINTS_6961:0 "나홋카"
 VICTORY_POINTS_6966:0 "타라고나"
 VICTORY_POINTS_6973:0 "라스페치아"
 VICTORY_POINTS_6983:0 "바냐루카"
@@ -539,7 +580,7 @@ VICTORY_POINTS_7236:0 "핫야이"
 VICTORY_POINTS_7251:0 "라바울"
 VICTORY_POINTS_7254:0 "파테인" #바세인
 VICTORY_POINTS_7259:0 "빅토리아"
-VICTORY_POINTS_7274:0 "노보시비르스크"
+VICTORY_POINTS_7274:0 "노보니콜라옙스크"
 VICTORY_POINTS_7302:0 "수바"
 VICTORY_POINTS_7315:0 "시애틀"
 VICTORY_POINTS_7329:0 "코타바루"
@@ -575,7 +616,6 @@ VICTORY_POINTS_7588:0 "찰스턴"
 VICTORY_POINTS_7590:0 "관타나모"
 VICTORY_POINTS_7594:0 "노부암부르구"
 VICTORY_POINTS_7603:0 "타웅지"
-VICTORY_POINTS_7616:0 "블라고베셴스크"
 VICTORY_POINTS_7617:0 "콜론"
 VICTORY_POINTS_7621:0 "마르델플라타"
 VICTORY_POINTS_7622:0 "아바나"
@@ -584,17 +624,21 @@ VICTORY_POINTS_7638:0 "리오그란데"
 VICTORY_POINTS_7645:0 "스퉁트렝" #치앙톙/샹톙
 VICTORY_POINTS_7656:0 "카이펑"
 VICTORY_POINTS_7660:0 "산토 도밍고"
-VICTORY_POINTS_7661:0 "바쿠"
+VICTORY_POINTS_7661:0 "바키"
 VICTORY_POINTS_7669:0 "다윈"
+VICTORY_POINTS_7708:0 "파블로다르"
+VICTORY_POINTS_7757:0 "케메로보"
+VICTORY_POINTS_7763:0 "블라고베셴스크"
 VICTORY_POINTS_7779:0 "헬레나"
+VICTORY_POINTS_7789:0 "톰스크"
 VICTORY_POINTS_7798:0 "멜버른"
 VICTORY_POINTS_7799:0 "울리아스타이"
+VICTORY_POINTS_7816:0 "베르흐네우딘스크"
 VICTORY_POINTS_7836:0 "오스틴"
 VICTORY_POINTS_7859:0 "캔버라"
 VICTORY_POINTS_7899:0 "선더베일"
 VICTORY_POINTS_7909:0 "치앙퉁" #켕퉁
 VICTORY_POINTS_7938:0 "알라하바드"
-VICTORY_POINTS_7940:0 "거얼무"
 VICTORY_POINTS_7953:0 "아바즈"
 VICTORY_POINTS_7959:0 "몬로비아"
 VICTORY_POINTS_7960:0 "아부다비"
@@ -637,14 +681,17 @@ VICTORY_POINTS_9108:0 "룰레오"
 VICTORY_POINTS_9161:0 "인버네스"
 VICTORY_POINTS_9206:0 "비푸리"
 VICTORY_POINTS_9221:0 "도르파트"
+VICTORY_POINTS_9239:0 "옥스퍼드"
+VICTORY_POINTS_9258:0 "펜자"
+VICTORY_POINTS_9259:0 "체복사리"
 VICTORY_POINTS_9262:0 "리바우"
 VICTORY_POINTS_9279:0 "말뫼"
-VICTORY_POINTS_9239:0 "옥스포드"
 VICTORY_POINTS_9288:0 "고멜"
 VICTORY_POINTS_9289:0 "마힐료우"
 VICTORY_POINTS_9292:0 "첼랴빈스크"
 VICTORY_POINTS_9297:0 "버밍엄"
 VICTORY_POINTS_9303:0 "갈웨이"
+VICTORY_POINTS_9304:0 "나바흐루다크"
 VICTORY_POINTS_9315:0 "셰필드"
 VICTORY_POINTS_9335:0 "레이와르덴"
 VICTORY_POINTS_9340:0 "리가"
@@ -663,6 +710,7 @@ VICTORY_POINTS_9461:0 "루한스크"
 VICTORY_POINTS_9471:0 "켐니츠"
 VICTORY_POINTS_9478:0 "앙제"
 VICTORY_POINTS_9480:0 "서드베리"
+VICTORY_POINTS_9481:0 "빈니차"
 VICTORY_POINTS_9483:0 "샤울라이"
 VICTORY_POINTS_9490:0 "트르와"
 VICTORY_POINTS_9495:0 "렌"
@@ -671,7 +719,9 @@ VICTORY_POINTS_9503:0 "스트라스부르"
 VICTORY_POINTS_9508:0 "우치"
 VICTORY_POINTS_9509:0 "빌레펠트"
 VICTORY_POINTS_9517:0 "슈투트가르트"
+VICTORY_POINTS_9518:0 "벨고로드"
 VICTORY_POINTS_9522:0 "아헨"
+VICTORY_POINTS_9540:0 "우스트메드베디츠카야스타니차"
 VICTORY_POINTS_9546:0 "칼리시"
 VICTORY_POINTS_9548:0 "체르니우치"
 VICTORY_POINTS_9559:0 "메스"
@@ -679,15 +729,16 @@ VICTORY_POINTS_9560:0 "할레"
 VICTORY_POINTS_9567:0 "오스트라바"
 VICTORY_POINTS_9570:0 "브레슬라우"
 VICTORY_POINTS_9600:0 "루가노"
+VICTORY_POINTS_9604:0 "임페라토르스카야가반"
 VICTORY_POINTS_9605:0 "부하라"
 VICTORY_POINTS_9606:0 "티미쇼아라"
 VICTORY_POINTS_9613:0 "우디네"
 VICTORY_POINTS_9616:0 "보이시"
 VICTORY_POINTS_9617:0 "부쿠레슈티"
-VICTORY_POINTS_9621:0 "서버드커"
 VICTORY_POINTS_9620:0 "베른"
-VICTORY_POINTS_9628:0 "블라디캅카스"
+VICTORY_POINTS_9621:0 "서버드커"
 VICTORY_POINTS_9627:0 "라이바하"
+VICTORY_POINTS_9628:0 "블라디캅카스"
 VICTORY_POINTS_9635:0 "키우스텐자" #키우스톈자
 VICTORY_POINTS_9638:0 "바젤"
 VICTORY_POINTS_9642:0 "브장송"
@@ -799,6 +850,7 @@ VICTORY_POINTS_10447:0 "포르투 알레그레"
 VICTORY_POINTS_10472:0 "카르스"
 VICTORY_POINTS_10513:0 "상파울루"
 VICTORY_POINTS_10578:0 "바얀 투멘"
+VICTORY_POINTS_10583:0 "보다이보"
 VICTORY_POINTS_10584:0 "우스트카메노고르스크"
 VICTORY_POINTS_10611:0 "리자이나"
 VICTORY_POINTS_10627:0 "헴벨디르"
@@ -856,11 +908,14 @@ VICTORY_POINTS_11105:0 "헬싱키"
 VICTORY_POINTS_11108:0 "포트마우치"
 VICTORY_POINTS_11136:0 "애버딘"
 VICTORY_POINTS_11159:0 "페트로자보츠크"
+VICTORY_POINTS_11189:0 "볼로그다"
 VICTORY_POINTS_11202:0 "프스코프"
 VICTORY_POINTS_11215:0 "칼스크로나"
 VICTORY_POINTS_11225:0 "사마라"
+VICTORY_POINTS_11234:0 "벨리키예루키"
 VICTORY_POINTS_11237:0 "워터퍼드"
 VICTORY_POINTS_11241:0 "비쳅스크"
+VICTORY_POINTS_11248:0 "랴잔"
 VICTORY_POINTS_11253:0 "케임브리지"
 VICTORY_POINTS_11279:0 "레스터"
 VICTORY_POINTS_11293:0 "더블린"
@@ -870,28 +925,34 @@ VICTORY_POINTS_11331:0 "뤼베크"
 VICTORY_POINTS_11349:0 "르제프"
 VICTORY_POINTS_11360:0 "빌헬름스하펜"
 VICTORY_POINTS_11366:0 "플렌스부르크"
+VICTORY_POINTS_11366:0 "Roslavl" #개발자들 실수
 VICTORY_POINTS_11370:0 "멘스크"
 VICTORY_POINTS_11371:0 "슬라이고"
 VICTORY_POINTS_11375:0 "니즈니노보그라드"
 VICTORY_POINTS_11380:0 "노르쾨핑"
+VICTORY_POINTS_11381:0 "탐보프"
 VICTORY_POINTS_11401:0 "라이히헨베르크"
-VICTORY_POINTS_11405:0 "올렉산드롭스크"
+VICTORY_POINTS_11405:0 "올렉산드리프스크"
 VICTORY_POINTS_11411:0 "스타니스와부프"
 VICTORY_POINTS_11417:0 "뷔르츠부르크"
 VICTORY_POINTS_11435:0 "비트부르크"
 VICTORY_POINTS_11437:0 "카테리노슬라프"
 VICTORY_POINTS_11456:0 "네이메헌"
+VICTORY_POINTS_11462:0 "수미"
 VICTORY_POINTS_11465:0 "낭트"
 VICTORY_POINTS_11467:0 "힌덴부르크"
 VICTORY_POINTS_11479:0 "리비우"
 VICTORY_POINTS_11483:0 "릴"
 VICTORY_POINTS_11506:0 "파리"
+VICTORY_POINTS_11514:0 "지토미르"
 VICTORY_POINTS_11516:0 "난치히"
 VICTORY_POINTS_11519:0 "리에주"
+VICTORY_POINTS_11523:0 "포크로우스크"
 VICTORY_POINTS_11531:0 "자르브뤼켄"
 VICTORY_POINTS_11535:0 "캉"
 VICTORY_POINTS_11537:0 "우랄스크"
 VICTORY_POINTS_11542:0 "프라하"
+VICTORY_POINTS_11543:0 "리우네"
 VICTORY_POINTS_11544:0 "뉘른베르크"
 VICTORY_POINTS_11546:0 "미콜라이우"
 VICTORY_POINTS_11548:0 "칼레"
@@ -914,7 +975,9 @@ VICTORY_POINTS_11670:0 "오데사"
 VICTORY_POINTS_11674:0 "간자"
 VICTORY_POINTS_11691:0 "운그바르"
 VICTORY_POINTS_11699:0 "포"
+VICTORY_POINTS_11701:0 "포트알렉산드롭스키"
 VICTORY_POINTS_11707:0 "오비에도"
+VICTORY_POINTS_11745:0 "달네고르스크"
 VICTORY_POINTS_11746:0 "아다나"
 VICTORY_POINTS_11747:0 "앙카라"
 VICTORY_POINTS_11752:0 "장베이"
@@ -958,11 +1021,13 @@ VICTORY_POINTS_12051:0 "콩스탕틴"
 VICTORY_POINTS_12055:0 "쑤저우"
 VICTORY_POINTS_12067:0 "옌청"
 VICTORY_POINTS_12068:0 "타카오" #가오슝/카오슝타카오/타카우
+VICTORY_POINTS_12071:0 "룩소르"
 VICTORY_POINTS_12080:0 "인도리"
 VICTORY_POINTS_12090:0 "시트웨"
 VICTORY_POINTS_12113:0 "탄중피낭"
 VICTORY_POINTS_12118:0 "세부"
 VICTORY_POINTS_12127:0 "바고"
+VICTORY_POINTS_12128:0 "오렌부르크"
 VICTORY_POINTS_12131:0 "빠타니" #페타니
 VICTORY_POINTS_12133:0 "칸토"
 VICTORY_POINTS_12137:0 "러크나우"
@@ -1001,7 +1066,7 @@ VICTORY_POINTS_12412:0 "하얼빈"
 VICTORY_POINTS_12417:0 "우본랏차타니"
 VICTORY_POINTS_12421:0 "아사히카와"
 VICTORY_POINTS_12432:0 "다통"
-VICTORY_POINTS_12438:0 "히베이랑프레투" 
+VICTORY_POINTS_12438:0 "히베이랑프레투"
 VICTORY_POINTS_12440:0 "리베라"
 VICTORY_POINTS_12446:0 "토요하라"
 VICTORY_POINTS_12453:0 "콘셉시온델우루과이"
@@ -1018,11 +1083,15 @@ VICTORY_POINTS_12518:0 "오호츠크"
 VICTORY_POINTS_12520:0 "흐브드"
 VICTORY_POINTS_12552:0 "산타페"
 VICTORY_POINTS_12559:0 "니콜라옙스크"
-VICTORY_POINTS_12583:0 "비슈케크"
+VICTORY_POINTS_12583:0 "피슈페크"
 VICTORY_POINTS_12586:0 "오마하"
 VICTORY_POINTS_12589:0 "케이프타운"
 VICTORY_POINTS_12620:0 "피어"
+VICTORY_POINTS_12641:0 "치타"
+VICTORY_POINTS_12660:0 "루흘로보"
 VICTORY_POINTS_12674:0 "레이캬비크"
+VICTORY_POINTS_12678:0 "티혼카야"
+VICTORY_POINTS_12681:0 "키렌스크"
 VICTORY_POINTS_12725:0 "포트수단"
 VICTORY_POINTS_12727:0 "리야드"
 VICTORY_POINTS_12732:0 "란저우"
@@ -1116,6 +1185,7 @@ VICTORY_POINTS_13551:0 "잔지바르스타드"
 VICTORY_POINTS_13575:0 "그라츠"
 VICTORY_POINTS_13601:0 "누크"
 VICTORY_POINTS_13604:0 "몬로비아"
+VICTORY_POINTS_13607:0 "나소"
 VICTORY_POINTS_13631:0 "스캐퍼플로"
 VICTORY_POINTS_13641:0 "은고마"
 VICTORY_POINTS_13648:0 "몽구"
