--- a/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
@@ -925,7 +925,7 @@ VICTORY_POINTS_11331:0 "뤼베크"
 VICTORY_POINTS_11349:0 "르제프"
 VICTORY_POINTS_11360:0 "빌헬름스하펜"
 VICTORY_POINTS_11366:0 "플렌스부르크"
-VICTORY_POINTS_11366:0 "Roslavl" #개발자들 실수
+#VICTORY_POINTS_11366:0 "Roslavl" #개발자들 실수로 중복됨
 VICTORY_POINTS_11370:0 "멘스크"
 VICTORY_POINTS_11371:0 "슬라이고"
 VICTORY_POINTS_11375:0 "니즈니노보그라드"
