--- a/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
@@ -193,8 +193,8 @@ TEX_populist_education:0 "대중을 위한 교육"
 TEX_populist_education_desc:0 "이 위대한 나라에는 수백만 명의 아이들이 정상적인 삶을 재개하기 위해 고군분투하고 있으나 교육 받지 않은 부모들의 미래와 다를 바 없는 미래를 살게 될 것입니다. 롱 각하께서는 어려움에 처한 미국민들을 위해 국회가 통과시킨 법안을 승인하여 학교를 재건하고 대학을 재개장했습니다."
 TEX_road_map_for_the_future:0 "미래를 향한 로드맵"
 TEX_road_map_for_the_future_desc:0 "'모든 사람은 왕이다'에 사용되는 대통령 각하의 예산은 근본적으로 다른 세금 징수 수단의 확충과 공공 재정을 필요로 합니다. 따라서 대통령 각하께서는 향후 4년간의 임기 동안 미국이 통과해야 할 이정표를 세울 로드맵을 마련했습니다."
-TEX_national_youth_adminstration:0 "국립청년단"
-TEX_national_youth_adminstration_desc:0 "내전의 고아들은 먹고살기 위한 교육뿐만 아니라 규율도 필요합니다. 오마하주 네브라스카 근처의 고아원 방문은 롱 각하가 국립청년단을 설립하는 계기가 되었습니다. 어린 미국민들을 위한 직업 훈련과 행동주의 소조는 고아들에게 삶의 터전을 마련해주고 인생을 살아가는데 있어서 중요한 기술들을 가르쳐줍니다."
+TEX_national_youth_adminstration:0 "국가청년국"
+TEX_national_youth_adminstration_desc:0 "내전의 고아들은 먹고살기 위한 교육뿐만 아니라 규율도 필요합니다. 오마하주 네브라스카 근처의 고아원 방문은 롱 각하가 국가청년국을 설립하는 계기가 되었습니다. 어린 미국민들을 위한 직업 훈련과 행동주의 소조는 고아들에게 삶의 터전을 마련해주고 인생을 살아가는데 있어서 중요한 기술들을 가르쳐줍니다."
 TEX_share_the_wealth:0 "부를 공유하다"
 TEX_share_the_wealth_desc:0 "미국을 내전에 빠지는 것을 도운 부자들이 피해를 배상할 때가 왔습니다. 그 누구도 연소득의 300배 이상을 축적하는 것이 허용되지 않을 것입니다. 소득의 상한선은 100만 달러, 상속의 상한선은 510만 달러입니다. 롱 각하께서는 자신을 비난한 언론들이 틀렸다는 것을 증명할 것입니다."
 TEX_imperial_presidency:0 "제왕적 대통령직"
