--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -66,9 +66,9 @@ annex.20.t:0 "크로아티아 합병"
 annex.20.d:0 "크로아티아인들은 이제 우리 명령을 듣습니다. 아직 일부 저항 세력이 남아있지만, 우리 군홧발에 짓밟힐 것입니다!"
 annex.21.t:0 "슬로베니아 합병"
 annex.21.d:0 "우리 군대는 슬로베니아 수도를 행진하고 있으며 정부는 우리 힘 앞에 무릎 꿇었습니다. 이제 이들을 어떻게 할지 결정해야합니다."
-annex.21.b:0 "Return the Slovene lands to Austria"
-annex.21.c:0 "Transer it to our Croatian allies"
-annex.21.e:0 "Transer it to our Yugoslav allies"
+annex.21.b:0 "슬로베니아의 영토를 오스트리아에게 돌려주어라"
+annex.21.c:0 "크로아티아의 친구들에게 주어라"
+annex.21.e:0 "유고슬라비아의 친구들에게 주어라"
 annex.22.t:0 "폴란드 합병"
 annex.22.d:0 "폴란드군은 어제 이른 오후 항복했으며, 우리 군대는 바르샤바를 행진하고 있습니다."
 annex.22.b:0 "저 망할 폴란드놈들은 포기하지 않는군..."
@@ -196,12 +196,12 @@ annex.62.e:0 "군사점령을 계속해라!"
 annex.63.t:0 "뉴잉글랜드 통합"
 annex.63.d:0 "반동분자스러운 뉴잉글랜드는 이제 완전히 우리 조국에 합병됬습니다."
 annex.63.a:0 "좋았어!"
-annex.64.t:0 "The Fate of Guatemala"
-annex.64.d:0 "The Guatemalan state has been annexed, our troops are parading in Ciudad de Guatemala. What should we do with the remnants of their history?"
-annex.64.a:0 "Liberate a loyal Guatemala"
-annex.64.b:0 "Return Belize to the West Indies Federation and liberate Guatemala"
-annex.64.c:0 "Occupy it!"
-annex.65.t:0 "The Fate of El Salvador"
+annex.64.t:0 "과테말라의 운명"
+annex.64.d:0 "과테말라는 합병되었고, 우리 군사들은 시우다드 데 과테말라에서 행진하고 있습니다. 우리는 잔당들을 어떻게 처리해야 할까요?"
+annex.64.a:0 "충성스러운 과테말라를 해방하라"
+annex.64.b:0 "벨리즈를 서인도 연합국에 반환하고 과테말라를 해방하라"
+annex.64.c:0 "합병해라!"
+annex.65.t:0 "엘살바도르의 운명"
 annex.65.d:0 "El Salvador has been annexed by our proud armies and our troops are parading in San Salvador. How should the administration be set up?"
 annex.65.a:0 "Liberate a loyal El Salvador!"
 annex.65.b:0 "Occupy the country!"
@@ -682,7 +682,7 @@ annex.170.t:0 "인도차이나의 운명"
 annex.170.d:0 "We are now in control of the wild regions of Indochina and we have to decide what to do with all of these different peoples."
 annex.170.a:0 "통일 인도차이나를 해방하라"
 annex.170.b:0 "베트남, 라오스, 캄보디아를 해방하라"
-annex.170.c:0 "Transfer Indochina to Deutsch-Ostasien"
+annex.170.c:0 "독일령 동아시아에게 인도차이나를 넘겨주어라"
 annex.171.t:0 "안달루시아의 운명"
 annex.171.d:0 "After a hard campaign throughout the isolated islands of the Australasian confederation our armies finally reached Camberra and with the capitulation of Australasia we must decide how we want to manage it."
 annex.171.a:0 "Liberate an united Australasian confederation"
