--- a/Kaiserreich Korean Translation/localisation/KR_Sardinia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Sardinia_l_english.yml
@@ -3,8 +3,8 @@ l_english:
 ### Parties ###
 SRD_totalist_party:0 "전체주의 연맹"
 SRD_totalist_party_long:0 "전체주의 연맹"
-SRD_syndicalist_party:0 "샤르데냐 생디칼리즘 연방"
-SRD_syndicalist_party_long:0 "샤르데냐 생디칼리즘 연방"
+SRD_syndicalist_party:0 "샤르데냐 생디칼리즘 연합"
+SRD_syndicalist_party_long:0 "샤르데냐 생디칼리즘 연합"
 SRD_radical_socialist_party:0 "샤르데냐 사회당"
 SRD_radical_socialist_party_long:0 "샤르데냐 사회당"
 SRD_social_democrat_party:0 "사르디 개혁파"
@@ -25,8 +25,8 @@ SRD_social_dem_party_long:0 "이탈리아 사회민주당"
 SRD_social_dem_party:0 "이탈리아 사회민주당"
 SRD_social_lib_party_long:0 "입헌민주당"
 SRD_social_lib_party:0 "입헌민주당"
-SRD_market_lib_party_long:0 "자유 연방"
-SRD_market_lib_party:0 "자유 연방"
+SRD_market_lib_party_long:0 "자유 연합"
+SRD_market_lib_party:0 "자유 연합"
 SRD_social_cons_party_long:0 "기독교 민주주의"
 SRD_social_cons_party:0 "기독교 민주주의"
 
