--- a/Kaiserreich Korean Translation/localisation/KR_Vietnam_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Vietnam_l_english.yml
@@ -27,20 +27,20 @@ VIE_Can_Lao:0 "칸 라오"
 VIE_Can_Lao_long:0 "근로인격혁명당(Can Lao Nhan Vi Cach Mang Dang)"
 
 ### Ideas ###
-VIE_Rural_Insurgency_idea:0 "Rural Insurgency"
+VIE_Rural_Insurgency_idea:0 "지방에서의 반란"
 VIE_Rural_Insurgency_idea_desc:0 "Vietnam has been engulfed by the open rural insurgency. Millions of peasants are not under the control of central government. This situation fundamentally cripples the state of Vietnam."
-VIE_Ineffective_Army_idea:0 "Ineffective Army"
+VIE_Ineffective_Army_idea:0 "비효율적인 군대"
 VIE_Ineffective_Army_idea_desc:0 "The army of Vietnam is more or less a microcosm of the country. Despite some loyal and courageous soldiers, its efficiency is weakened by corruption, demoralisation and dependency on foreign assistance."
-VIE_Ineffective_Army_idea_2:0 "Ineffective Army"
+VIE_Ineffective_Army_idea_2:0 "비효율적인 군대"
 VIE_Ineffective_Army_idea_2_desc:0 "The army of Vietnam is more or less a microcosm of the country. Despite some loyal and courageous soldiers, its efficiency is weakened by corruption, demoralisation and dependency on foreign assistance. The situation has been slightly improved since the introduction of series of reforms."
-VIE_Da_Lat_Academy:0 "Da Lat Military Academy"
+VIE_Da_Lat_Academy:0 "다 랏 군사 학교"
 VIE_Elite_Troops_Idea:0 "Elite Units"
 VIE_FAC_Group_idea:0 "Forward Air Control Group"
-VIE_Fighter_Bombers_idea:0 "Fighter Bomber design"
-VIE_Nha_Trang_idea_idea:0 "Nha Trang Airforce Academy"
-VIE_caodaism_spread_idea:0 "Caodaism Spreading"
+VIE_Fighter_Bombers_idea:0 "전폭기 설계"
+VIE_Nha_Trang_idea_idea:0 "나짱 공군 학교"
+VIE_caodaism_spread_idea:0 "퍼지는 까오다이주의"
 VIE_nationalist_rhetoric_idea:0 "Nationalist Rhetoric"
-VIE_harmonious_society_idea:0 "Harmonious Society"
+VIE_harmonious_society_idea:0 "조화로운 사회"
 VIE_Caodai_welfare_state_idea:0 "Caodai welfare state"
 VIE_strengthen_competetiveness_idea:0 "Strengthened Competitiveness"
 VIE_deus_vult_idea:0 "Battle Catholics"
@@ -51,20 +51,20 @@ VIE_eliteunit_tt:0 "Two new elite militias will form."
 VIE_massunit_tt:0 "Seven new militias will form throughout the nation."
 
 ### Focuses ###
-VIE_Imperial_Council:0 "Imperial Council"
+VIE_Imperial_Council:0 "제국 의회"
 VIE_Imperial_Council_desc:0 "The administrative system of Nguyen dynasty is literally a living fossil. The six boards were organised along the lines of traditional Chinese governments since the Tang dynasty. During the Duy Tan era, the system was slightly modified, but now it's terribly outdated. Even the most conservative ministers agree that the cabinet must be reorganised to adapt to new situation. We will hold an imperial council to reorganise the court."
 VIE_Create_New_Forces:0 "Create New Forces"
-VIE_Army_Reorganization:0 "Army Reorganisation"
-VIE_The_End_Of_War:0 "The End Of War"
+VIE_Army_Reorganization:0 "군대 재조직화"
+VIE_The_End_Of_War:0 "전쟁의 끝"
 VIE_Anti_Syndicalist_Rhetoric:0 "Anti Syndicalist Rhetoric"
 VIE_Purge_Sympathizer:0 "Purge Sympathiser"
 VIE_Our_Social_Agenda:0 "Our Social Agenda"
 VIE_Pacification_Effort:0 "Pacification Effort"
 VIE_Military_Mobilization:0 "Military Mobilisation"
-VIE_Education_Reform:0 "Education Reform"
+VIE_Education_Reform:0 "교육 개혁"
 VIE_Administrative_Reform:0 "Administrative Reform"
 VIE_Secure_Foreign_Assistance:0 "Secure Foreign Assistance"
-VIE_Economic_Efforts:0 "Economic Efforts"
+VIE_Economic_Efforts:0 "경제적 노력"
 VIE_Cabinet_Reorganization:0 "Emperor's Great Proclaimation"
 VIE_Religious_Fervor:0 "Religious Fervor"
 VIE_Virgin_Mary_Goes_North:0 "Virgin Mary Goes North"
@@ -142,15 +142,15 @@ VIE_Armor_Experiment:0 "Armour Experiment"
 VIE_Motorization:0 "Motorisation"
 VIE_Vietnamese_Panzergrenadier:0 "Vietnamese Panzergrenadier"
 VIE_Educate_Cambodians:0 "Educate Cambodians"
-VIE_Situation_in_East_Asia:0 "Situation in East Asia"
-VIE_Ally_with_Japan:0 "Ally with Japan"
-VIE_Spread_Caodaism:0 "Spread Caodaism"
-VIE_CaoDai_Republic:0 "CaoDai Republic"
+VIE_Situation_in_East_Asia:0 "동아시아의 상황"
+VIE_Ally_with_Japan:0 "일본과의 동맹"
+VIE_Spread_Caodaism:0 "까오다이주의의 전파"
+VIE_CaoDai_Republic:0 "까오다이 공화국"
 VIE_Convergence_of_Five_Religions:0 "Convergence of Five Religions"
-VIE_Restore_Social_Harmony:0 "Restore Social Harmony"
+VIE_Restore_Social_Harmony:0 "조화로운 사회 복구"
 VIE_Invite_Prince_Cuong_De:0 "Invite Prince Cuong De"
-VIE_Elevate_Women_Status:0 "Elevate Women Status"
-VIE_Crush_Vietcong:0 "Crush Vietcong"
+VIE_Elevate_Women_Status:0 "여성의 권익 증진"
+VIE_Crush_Vietcong:0 "베트콩을 부숴버려라"
 VIE_Land_to_The_Tillers:0 "Land to The Tillers"
 VIE_Emperor_and_his_Subjects:0 "Emperor and his Subjects"
 VIE_Confucianist_Constitutionalism:0 "A Moral Monarchy"
@@ -159,8 +159,8 @@ VIE_Modern_Mandarin:0 "Modern Mandarin"
 VIE_Village_Autonomy:0 "Village Autonomy"
 VIE_Traditional_Values:0 "Traditional Values"
 VIE_Modern_Monarchism:0 "National Renovation"
-VIE_Absorb_Vietcong_Program:0 "Absorb Vietcong Program"
-VIE_Eliminate_Vietcong:0 "Eliminate Vietcong"
+VIE_Absorb_Vietcong_Program:0 "베트콩 흡수 프로그램"
+VIE_Eliminate_Vietcong:0 "베트콩을 섬멸하라"
 VIE_Strengthen_Church_Order:0 "Strengthen Church Order"
 VIE_Revive_Nationalist_Rhetoric:0 "Revive Nationalist Rhetoric"
 VIE_Consolidate_Rural_Bases:0 "Consolidate Rural Bases"
@@ -172,7 +172,7 @@ VIE_Embrace_Indochina:0 "Embrace Indochina"
 ### Events ###
 vietnam.0.t:0 "Fire in the Lake"
 vietnam.0.d:0 "With the Vietcong rising in the south, the flame of insurgency has been spreading in all three regions of Vietnam. This is Vietnam's darkest hour, but our country will be and must be saved with the emperor's iron will and iron fist."
-vietnam.0.a:0 "Long live Nguyen dynasty! Long live the Emperor!"
+vietnam.0.a:0 "응우옌 왕조 만세! 황제 폐하 만세!"
 
 vietnam.1.t:0 "Gear up the military"
 vietnam.1.d:0 "Now we have to build our military force from the scratch. Germany already offer their help to train a small group of Vietnamese soldiers, but nationalists wanted to build a more independent force based on police and imperial guards. Or we can mobilise the mass for our anti-syndicalist war, but it's worried that the move could backfire if Vietcong infiltrated our people."
@@ -197,7 +197,7 @@ vietnam.4.d:0 "The newly established puppet Vietnam army desperately need assist
 vietnam.4.a:0 "Financial and military support"
 vietnam.4.b:0 "not a good idea"
 
-vietnam.5.t:0 "The Exodus"
+vietnam.5.t:0 "대탈출"
 vietnam.5.d:0 "The cruel and godless Vietcong has forced many religious believer to flee from their control zone. Most of them are Caodaists under Pham Cong Tac's Cao Dai church. How to deal with these refugees?"
 vietnam.5.b:0 "New settlements shall become our battle bastions!"
 vietnam.5.a:0 "Try to resettle them in safe places"
