--- a/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -155,38 +155,38 @@ BEL_Reintroduce_Census_Voting:0 "선거 시스템 개혁"
 BEL_Reintroduce_Census_Voting_desc:0 "우리의 투표 시스템을 전면 개편함으로써 우리는 정치 불안에 대한 대가로 정치 상황을 더욱 강력하게 통제할 수 있게 될 것입니다."
 BEL_Expand_Feldgendarmerie:0 "헌병대 확장"
 BEL_Expand_Feldgendarmerie_desc:0 "야전 헌병대는 우리의 특별한 독일 경찰 부서이며 가장 충성스러운 지원자입니다. 독일군을 이 병력에 추가로 모집함으로써 우리는 저항에 대해 보다 효과적으로 단속 할 수 있습니다."
-BEL_Increase_Suppression:0 "진압 증가"
+BEL_Increase_Suppression:0 "언론 통제력 증대"
 BEL_Increase_Suppression_desc:0 "불안을 줄이는 가장 좋은 방법은 선전을 가능한 한 많이 하는 것입니다. NIR을 설립함으로써 우리는 라디오와 텔레비전에 대한 완전한 통제권을 갖게 될 것이며, 우리 국민이 보고 듣는 것을 결정할 것입니다."
 BEL_Ban_Cooperatives_f:0 "협동조합 금지"
 BEL_Ban_Cooperatives_f_desc:0 "더 이상의 반란을 막기 위해서는 협력체로 시작하는 우리나라의 모든 생디칼리스트 조직을 없애야 합니다."
 BEL_Enforce_German_Education:0 "독일식 교육 강요"
 BEL_Enforce_German_Education_desc:0 "어린 나이때부터 독일식 교육을 더욱 강화함으로써 우리는 우리 국민들을 통제할 수 있습니다."
-BEL_Join_The_Kaiser_Research:0 "카이저 빌헬름 학회에 가입"
+BEL_Join_The_Kaiser_Research:0 "카이저 빌헬름 학회 가입"
 BEL_Join_The_Kaiser_Research_desc:0 "벨기에의 과학적 영광의 날들은 점령 후에 끝이 났습니다. 그래서 우리는 프랑스로부터 우리 자신을 지키기 위해 독일의 연구에 의존해야만 합니다."
-BEL_Soldiers_To_Protect_The_Empire:0 "독일 제국을 지키기 위한 병사들"
-BEL_Soldiers_To_Protect_The_Empire_desc:0 "독일 제국을 보호하기 위해 우리는 강력한 방어군이 필요합니다. 따라서 우리는 더 많은 인구를 입대하도록 인도할 것입니다."
+BEL_Soldiers_To_Protect_The_Empire:0 "제국을 지키기 위한 병사들"
+BEL_Soldiers_To_Protect_The_Empire_desc:0 "독일 제국을 보호하기 위해 우리는 강력한 방어군이 필요합니다. 따라서 우리는 더 많은 시민들의 입대를 권유할 것입니다."
 BEL_Expand_The_Westwall:0 "서부방벽 확장"
 BEL_Expand_The_Westwall_desc:0 "서부방벽은 생디칼리스트의 위협에 맞서는 우리의 유일한 방어책이며 어떤 일이 있어도 반드시 보호되어야만 합니다."
 BEL_Guidance_By_The_Flemish_Council:0 "플란데런 의회의 지침"
 BEL_Guidance_By_The_Flemish_Council_desc:0 "플란데런 의회가 수년 간의 예산 평가를 처리하도록 허용함으로써 우리는 그들의 지지를 보장할 수 있고 우리가 단지 사악한 압제자가 아니라는 것을 잠재적으로 설득할 수 있습니다."
 BEL_Give_Power_To_Parliament:0 "의회에 권력 부여"
 BEL_Give_Power_To_Parliament_desc:0 "우리는 좀 더 개방적인 형태의 정부로 옮겨 가서, 야당들이 토론에서 일어나도록 하고, 왕을 직접 지지하는 사람들보다 다른 당들을 천천히 인식하도록 할 것입니다."
-BEL_Combat_German_Favoritism:0 "독일 애국주의 투쟁"
-BEL_Combat_German_Favoritism_desc:0 "우리나라의 큰 문제는 독일 시민들이 정부에 의해 선호되고 많은 고위 직책이 독일 국적을 가진 시민들에게만 확보되어 있다는 것입니다. 우리 사법 제도에 더 많은 권한을 부여함으로써 우리는 이 나라를 더욱 통합시킬 수 있습니다."
+BEL_Combat_German_Favoritism:0 "독일인 편벽주의에 맞서다"
+BEL_Combat_German_Favoritism_desc:0 "우리나라의 큰 문제는, 많은 고위 직책이 독일 국적자들에게만 허락되는 등 독일인만을 우대한다는 것입니다. 우리 일반 시민들에게 더 많은 권리를 부여함으로써 우리는 이 나라를 더욱 통합시킬 수 있습니다."
 BEL_Reform_The_Provincial_System:0 "주 정부 시스템 개혁"
 BEL_Reform_The_Provincial_System_desc:0 "국민들의 요구를 더 잘 이해하기 위해 정부는 지방 제도를 개혁하기로 결정했습니다. 9개 지방에서 플란데런와 우알로니를 나누고 경제적 책임을 세가지로 나눔으로써 우리는 우리나라를 지방의 요구에 더 잘 적응시킬 수 있을 것입니다."
-BEL_Create_Free_Education:0 "무료 교육 창설"
-BEL_Create_Free_Education_desc:0 "가톨릭 정당을 공격하는 가장 좋은 방법은 교육부에서의 권력을 축소하는 것입니다. 주 및 시 교육에 막대한 자금을 지원함으로써 우리는 더 많은 대중에게 교육을 제공하고 가톨릭 교육에 대한 의존도를 줄일 수 있습니다."
+BEL_Create_Free_Education:0 "무료 교육 실시"
+BEL_Create_Free_Education_desc:0 "가톨릭 정당을 공격하는 가장 좋은 방법은 교육 분야에서의 영향력을 축소시키는 것입니다. 주 및 시 교육에 막대한 자금을 지원함으로써 우리는 더 많은 대중에게 교육을 제공하고 가톨릭 교육에 대한 의존도를 줄일 수 있습니다."
 BEL_State_Funded_Cooperatives:0 "주립 기금 협동 조합"
-BEL_State_Funded_Cooperatives_desc:0 "프랑스 생디칼리스트들의 압박에 대처하기 위해 정부는 협동 조합을 재 도입 할 것을 제안했습니다. 그들은 보다 온화한 노동 조합이며, 모든 근로자가 머물고 음식을 먹을 수 있는 곳을 확보할 책임이 있습니다."
+BEL_State_Funded_Cooperatives_desc:0 "프랑스 생디칼리스트들의 압박에 대처하기 위해 정부는 협동 조합의 재도입을 제안했습니다. 그들은 보다 온화한 노동 조합이며, 모든 근로자가 머물고 음식을 먹을 수 있는 곳을 확보할 책임이 있습니다."
 BEL_Catholic_Education_Reforms:0 "가톨릭 교육 개혁"
 BEL_Catholic_Education_Reforms_desc:0 "가톨릭 교육은 항상 자신의 힘을 표현하는 가장 중요하고 가장 강력한 도구 중 하나입니다. 플란데런 인구의 대부분은 가톨릭 계열 학교에서 교육받았으며, 가톨릭 정당이 제안한 대규모 개혁은 우리 교육의 전반적인 수준을 향상시키는 계획입니다."
 BEL_Caritas:0 "카리타스"
-BEL_Caritas_desc:0 "카리타스는 원래 가난한 사람들을 돕기 위해 가톨릭 교회가 만든 시스템입니다. 가톨릭 정권의 권력이 커짐에 따라 그들은 조직을 확대할 수 있었으며 플란데런와 우알로니 전역에서 조직을 확대할 수 있었습니다."
-BEL_Trans_Regional_Associations:0 "트랜스 지방 협회"
+BEL_Caritas_desc:0 "'카리타스'는 원래 가난한 이들을 돕기 위해 가톨릭 교회가 만든 구호 시스템입니다. 가톨릭 정권의 권력이 커짐에 따라 그들은 조직을 확대할 수 있었으며 플란데런와 우알로니 전역에서 조직을 확대할 수 있었습니다."
+BEL_Trans_Regional_Associations:0 "초지역적 협력"
 BEL_Trans_Regional_Associations_desc:0 "군 내부의 가장 큰 갈등은 대다수 군 용어는 독일어, 고위 장교들은 독일인일 수 밖에 없다는 사실입니다. 이 문제에 관한 토론을 시작함으로써, 우리는 이러한 문제들 중 많은 것들을 해결할 수 있을 것입니다."
 BEL_Rally_Behind_the_Lion:0 "방패와 친구"
-BEL_Rally_Behind_the_Lion_desc:0 "플란데런를 지원하는 가장 좋은 방법은 프랑스에 대한 그들의 증오가 우리에 대한 증오보다 더 크다는 것을 확실히 하는 것입니다. 플란데런 반란 중에 프랑스인을 식별하기 위해 사용된 유명한 속담 "방패와 친구 (Schild en Vriend)"를 상기시킴으로써 우리는 플란데런의 움직임을 우리의 깃발 아래 모을 수 있습니다."
+BEL_Rally_Behind_the_Lion_desc:0 "플란데런을 진정시키는 가장 좋은 방법은, 그들은 우리를 증오하지만 프랑스는 더 증오한다는 사실을 이용하는 것입니다. 플란데런 반란 중에 프랑스인을 식별하기 위해 사용된 유명한 속담 "방패와 친구 (Schild en Vriend)"를 상기시킴으로써 우리는 플란데런을 우리가 원하는 대로 움직일 수 있습니다."
 BEL_Stop_the_Flamenpolitik:0 "플라망 정책 중지"
 BEL_Stop_the_Flamenpolitik_desc:0 "플라망 정책은 세계대전 기간 동안 독일 점령군에 의해 처음 시행되었고, 기존 우알로니가 플란데런에 대해 가지고 있던 상대적 우위를 재조정해 내부 분열을 유발하는 것이 그 목적이었습니다. 내부 분열을 유도하려는 원래 의도는 성공적이었지만, 이것은 플란데런-우알로니를 훨씬 불안정한 국가로 만들었고, 독일 체제에 대한 우알로니인들의 강한 혐오감을 초래했습니다."
 BEL_Restore_the_law_Lejeune:0 "르준법 복원"
