--- a/Kaiserreich Korean Translation/localisation/KR_Capitulations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Capitulations_l_english.yml
@@ -32,12 +32,9 @@ capt.6.t:0 "[From.GetNameDefCap](이)가 휴전을 제안하다"
 capt.6.d:0 "독일의 와해된 군대들은, 이제 아프리카로 도망갔으며, 독일이 가진 [GEA.GetNameDef]의 영토 중 상당수를 우리에게 주는 것을 제안해왔습니다. 저들이 수장되기 전에 제안을 받아들인다면 우리는 전쟁을 끝낼 수 있을겁니다."
 capt.6.a:0 "훌륭한 계획이야"
 capt.6.b:0 "상당수? 우린 전부를 원해"
-                                                                        
-                                    
 
 capt.7.t:0 "[JAP.GetNameDef](과)와의 전쟁"
 capt.7.d:0 "It appears we need to deal with the continuing war in the Far East, with [JAP.GetAdjective] armies still fighting against our colonial forces. Should we continue the war, one we almost certainly cannot hope to have much impact on with our scattered and beaten forces, or sue for peace?"
-                                     
 
 capt.8.t:0 "[From.GetNameDefCap](이)가 휴전을 제안하다"
 capt.8.d:0 "The scattered forces of Germany, now fled to Africa, have offered us much of the colonial territory they hold in Asia, if we will only end the war now before they are drawn in further. Considering that refusing the deal will mean chasing after the Germans in Africa, perhaps we should consider their plan."
@@ -48,25 +45,28 @@ capt.9.t:0 "[GEX.GetNameDefCap](이)가 휴전을 제안하다"
 capt.9.d.siam:0 "The German government, now fled to Africa and in utter disarray, has arranged for a peace with [From.GetNameDef]. This will involve ceding much of our territory, and there seems little hope of continuing the fight on our own with so many Reich officials already abandoning their offices here in [GEA.GetNameDef]. Our government is in complete disarray, and without support from the homeland it seems there is little we can do."
 capt.9.d.japan:0 "The German government, now fled to Africa and in utter disarray, has arranged for a peace with [From.GetNameDef]. This will involve our complete annexation, and there seems little hope of continuing the fight on our own with so many Reich officials already abandoning their offices here in [GEA.GetNameDef]. Our government is in complete disarray, and without support from the homeland it seems there is little we can do."
 capt.9.a:0 "To the lifeboats! We're off to Africa!"
-                                                               
-                                                       
-                                                                        
-                                                              
-                                                                               
-                                                                         
 
 capt.12.t:0 "전쟁을 계속해야할까요?"
 capt.12.d:0 "The German government has collapsed and fled to Africa, assuming control over their former colonies here. They still possess much of the colonial territory we claim, however, and are in considerable disarray. Should we demand that they turn over the territories, on threat of continuing the war, or end it now?"
 capt.12.a:0 "식민지를 요구하라"
 capt.12.b:0 "독일과 싸울만큼 싸웠다"
 
-capt.13.t:0 " [NFA.GetAdjective]의 위협"
+capt.13.t:0 "The [NFA.GetAdjective] Threat"
 capt.13.d:0 "[NFA.GetNameDefCap] has issued a threat - either we turn over the colonies which once belonged to them, or they will continue their war against us. Considering our current state of disarray, it might be wise to accept their demands. If not, we will be fighting them here in Africa."
 capt.13.a:0 "Give them what they want, if it will end this"
 capt.13.b:0 "We face them here in Africa, then"
 
-capt.23.t:0 "The Germans Are Not Gone"
-capt.23.d:0 "While the last couple of days since the German collapse have been uncertain, fears that [Root.GetNameDef] would be left to its own devices are unfounded. The main German government has moved to Mittelafrika, and we have restored communications to their officials in Tanganyika. Order, at least for the moment, has been restored."
+capt.14.t:0 "The Germans Return"
+capt.14.d:0 "With the end of our war, the Germans have finally returned from the new base in Tanganyika to assume control. While there is some lingering resentment here, most are simply relieved to see them."
+capt.14.a:0 "Off to Tanganyika we go!"
+
+capt.15.t:0 "[GEA.GetNameDefCap] At Peace"
+capt.15.d:0 "With the war in [GEA.GetNameDef] finally over, our colonial administrators have returned them to our control."
+capt.15.a:0 "Excellent!"
+
+capt.23.t:0 "The German Collapse"
+capt.23.d.nowar:0 "While the last couple of days since the German collapse in Europe have been uncertain, fears that [Root.GetNameDef] would be left to its own devices are unfounded. The main German government has moved to Mittelafrika, and we have restored communications to their officials in Tanganyika. Order, at least for the moment, has been restored."
+capt.23.d.war:0 "With the Germans having collapsed in Europe and fled to Africa, the continuing war here in [Root.GetNameDef] has led to many of the colonial officials aleady having fled for the new capital in Tanganyika. Communications have not yet been restored, and it seems that - for the moment - we are on our own."
 capt.23.a:0 "That's a relief...?"
 capt.23.b:0 "We've been abandoned?!"
 
