누락구문수정

--- a/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -560,6 +560,7 @@ csa.9.e:0 "뉴욕"
 
 csa.10.t:0 "제헌회의가 막을 내렸습니다"
 csa.10.d:0 "제헌회의가 마침내 끝났고 새로운 미국 헌법이 제정되었습니다. 대표단은 새롭게 형성된 정치적 동맹이나 라이벌들을 인식하고 다시 자신들의 주로 돌아갈 것입니다. 축하 사진에서 불거진 낙관론에도 불구하고, 진정한 국가 재건은 이제 막 시작되었을 뿐입니다."
+csa.10.a:0 "미국의 노동자들이여 영원하라!"
 
 csa.11.t:0 "대통령 대행"
 csa.11.d.commonwealth:0 "회의 마지막 날에, 통칭 잭 리드로 알려진 존 실라 리드가 지도자 사임을 선언했습니다. 그의 악화된 건강은 언론들간의 신사협정에 의해 발표되지 않아왔습니다. 잭 리드는 남은 시간을 그의 아내인 루이즈와 딸과 보내고 싶다는 말도 덧붙였습니다. 게다가 리드는 자신의 근본적인 역할은 혁명을 수행하는 것이었고, 그 성과를 이끄는 것은 새로운 지도자들이 할 일이라고 강조하기도 했습니다. 회의에 참석한 사람들 중에서 두 사람이 유력한 후보로 떠올랐습니다. 한 명은 IWW의 엘리자베스 걸린 플린으로 전에 전국적인 캠페인을 벌이면서 여성 대통령의 가능성을 유권자에게 보여줬습니다. 다른 한명은 노먼 토마스로서 사회당 대표인 시절에 사회민주주의자들과 함께 일하면서 그들의 표를 가져오기도 했습니다. 비록 리드의 직위를 이어 받는 것이 선거 이전까지의 임시직이긴 하지만, 대통령들처럼 국가 재건에 큰 영향력을 줄 것임은 명백한 사실입니다."
