누락구문 추가

--- a/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -1795,3 +1795,4 @@ BEL_STANDING_ARMY:0 "Has a standing army"
 Small_Vlaamse_Wacht:0 "Has not restored the rights of the Vlaamse Wacht"
 Feldgendarmerie:0 "The Feldgendarmerie have been given the right to operate in Flanders-Wallonia"
 Belgium_Guaranteed_Germ:0 "The Treaty of Arel has been signed"
+BEL_SYN_REV:0 "The Wallonian Syndicalist Uprising Has Occured"
