--- a/Kaiserreich Korean Translation/localisation/KR_South_Africa_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_South_Africa_l_english.yml
@@ -557,3 +557,7 @@ saf.104.a:0 "Off the reservation"
 saf.105.t:0 "The Native Trust and Homeland Act"
 saf.105.d:0 "Territorial separation was hardly a new institution in South Africa. There were, for example, the 'reserves' created under the British government in the nineteenth century. Under apartheid, the percentage of land reserved was increased from 8 to 13 percent to be used for black homelands, still a relatively small amount compared with the total population, and generally in economically unproductive areas of the country. These homelands or 'Bantustans' divided South Africa into a number of separate states, each of which is supposed to develop into a separate nation-state for the different ethnic groups. The practical effect of this legislation was to remove the citizenship of natives living within South Africa and reduce their status to that of migrant labour. The Promotion of Bantu Self-government Act abolished the remaining parliamentary representation for black people under the Representation of Natives Act, now represented by their own 'national' authorities."
 saf.105.a:0 "OK"
+saf.106.t:0 "Paramount Chiefs Support the Dominion"
+saf.106.d:0 "Due to the earlier decision by the government to arm the Paramount Chiefs, they now have their own forces - albeit ill-equipped and not well trained - and have declared their support for the Dominion side in the civil war."
+saf.106.a:0 "Hardly surprising"
+saf.106.b:0 "We welcome their aid"
