--- a/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
@@ -1083,3 +1083,7 @@ STATE_1080:0 "압하지아"
 STATE_1081:0 "자가탈라"
 STATE_1082:0 "로리"
 STATE_1083:0 "쿠물"
+STATE_1084:0 "서몽골"
+STATE_1085:0 "타클라마칸 사막"
+STATE_1086:0 "창탕"
+STATE_1087:0 "마힐료우"
