특수기호 수정

--- a/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -458,7 +458,7 @@ CSA_revolutionary_captians_desc:0 "자국의 제국주의에 대항해서 싸운
 CSA_liberty_ships:0 "리버티선"
 CSA_liberty_ships_desc:0 "예전에는 상선을 생산했던 우리 조선소는 전 세계에 있는 우리 동맹에게 보급을 제공할 수많은 수송선을 만들 것입니다."
 CSA_coast_guard:0 "해안방위대"
-CSA_coast_guard_desc:0 "해안경비대의 재건은 무역을 원활하게 하고 바다에 범죄자들이 활보하는 것을 중단시키며 위험에 처한 사람을 구조하도록 할 수 있을 것입니다.“
+CSA_coast_guard_desc:0 "해안경비대의 재건은 무역을 원활하게 하고 바다에 범죄자들이 활보하는 것을 중단시키며 위험에 처한 사람을 구조하도록 할 수 있을 것입니다."
 CSA_destroy_captitalism:0 "자본주의를 파괴하라"
 CSA_destroy_captitalism_desc:0 "자본가들은 강력한 전함을 가지고 있으며, 혁명을 성공시키고 살아남게 하기 위해서는 그들과 맞먹는 전함을 양성해야 합니다. 드레드노트나 전함 항공모함은 아마 미국 노동자들의 안전을 보장할 것입니다."
 CSA_battleships:0 "전함 착수"
@@ -547,9 +547,9 @@ csa.7.a:0 "의회가 행정권을 행사한다."
 csa.7.b:0 "권한을 이양받은 대통령이 필요하다."
 
 csa.8.t:0 "사회주의 헌법 - 권력 집중 혹은 권력 분산"
-csa.8.d:0 "회의의 재개 이후, 그 어떤 시기보다 더 분열되고 있습니다. IWW의 핵심 인사들은 남은 헌법조항에 국가의 폭정을 막기 위해 조합원에 대한 평생 보장을 통한 사회복지 강화 및 종신 고용이라는 엄격한 도그마를 밀어 붙이고 있습니다. 심지어 몇몇 IWW 대표단들은 AFL이 적대적이였으며 그들이 자본주의로 회귀하기 원한다는 말까지 했습니다. 이에 대해서 AFL은 전위주의자들이 주장한 정부에서의 노동의 존엄성 강조에 마음을 기울이고 있습니다. 이 주장을 산업 노조주의를 기술 노조주의를 통해 지적하며 동일 노동, 동일 임금이라는 목표는 충분히 IWW의 목적인 임금 노동의 폐지를 대체할 수 있다고 말합니다.  AFL은 이것이 노조 선거를 통한 51 %의 독재에 대항해 49%를 안전을 지킬 수 있다고 주장합니다.“
-csa.8.a:0 "종신 고용은 독재를 막아낼 수 있다.“
-csa.8.b:0 "노동의 존엄성이 독재를 막아낼 수 있다.“
+csa.8.d:0 "회의의 재개 이후, 그 어떤 시기보다 더 분열되고 있습니다. IWW의 핵심 인사들은 남은 헌법조항에 국가의 폭정을 막기 위해 조합원에 대한 평생 보장을 통한 사회복지 강화 및 종신 고용이라는 엄격한 도그마를 밀어 붙이고 있습니다. 심지어 몇몇 IWW 대표단들은 AFL이 적대적이였으며 그들이 자본주의로 회귀하기 원한다는 말까지 했습니다. 이에 대해서 AFL은 전위주의자들이 주장한 정부에서의 노동의 존엄성 강조에 마음을 기울이고 있습니다. 이 주장을 산업 노조주의를 기술 노조주의를 통해 지적하며 동일 노동, 동일 임금이라는 목표는 충분히 IWW의 목적인 임금 노동의 폐지를 대체할 수 있다고 말합니다.  AFL은 이것이 노조 선거를 통한 51 %의 독재에 대항해 49%를 안전을 지킬 수 있다고 주장합니다."
+csa.8.a:0 "종신 고용은 독재를 막아낼 수 있다."
+csa.8.b:0 "노동의 존엄성이 독재를 막아낼 수 있다."
 
 csa.9.t:0 "사회주의 헌법 - 수도"
 csa.9.d:0 "결정될 마지막 사안 중 하나는 바로 미국의 수도입니다. 많은 사람들이 오랜 수도, 워싱턴 D.C를 옹호하고 있으며 이는 이해하기 어렵지 않습니다. 한편 다른 이들은 각각 충성스러운 도시들인 시카고, 필라델피아, 뉴욕을 지지하고 있습니다. 회의에서는 어느 도시를 선택해야 합니까?"
@@ -579,7 +579,7 @@ csa.12.b:0 "제일당 지도부는 유죄다."
 csa.12.c:0 "모든 당원들의 재산을 압류하고 체포해라"
 
 csa.13.t:0 "구정권에 대한 재판"
-csa.13.d:0 "혁명이 끝남에 따라서 우리와 싸웠던 적을 심판할 시간이 왔습니다. 정부를 장악하고 시민의 권리를 정지시킨 것에 대해서 이전 연방 정치인인 더글라스 맥아더에 대한 고발이 있었고, 보수적인 민주당원이자 구시대의 기업과 사회를 대표하는 헨리 모겐소 주니어가 망명간 멕아더를 대신해서 재판에 섰습니다. 그의 주장에 따르면 오직 맥아더 통치 아래에서만 유대인에 대한 제일당의 잔인한 공격을 막을 수 있었다고 하면서 멕아더 개인이 초-법적인 권력을 가지기 꺼렸다는 점을 언급하며 개인적으로 jamex coxey라는 사회주의자를 존경한다는 진술로 일부 배심원단을 흔들었습니다. 그리고 최종적인 재판 결과는....  “
+csa.13.d:0 "혁명이 끝남에 따라서 우리와 싸웠던 적을 심판할 시간이 왔습니다. 정부를 장악하고 시민의 권리를 정지시킨 것에 대해서 이전 연방 정치인인 더글라스 맥아더에 대한 고발이 있었고, 보수적인 민주당원이자 구시대의 기업과 사회를 대표하는 헨리 모겐소 주니어가 망명간 멕아더를 대신해서 재판에 섰습니다. 그의 주장에 따르면 오직 맥아더 통치 아래에서만 유대인에 대한 제일당의 잔인한 공격을 막을 수 있었다고 하면서 멕아더 개인이 초-법적인 권력을 가지기 꺼렸다는 점을 언급하며 개인적으로 jamex coxey라는 사회주의자를 존경한다는 진술로 일부 배심원단을 흔들었습니다. 그리고 최종적인 재판 결과는....  "
 csa.12.a:0 "연방 지도부를 사면해라"
 csa.12.b:0 "연방 지도부는 유죄다."
 csa.12.c:0 "모든 연방 지지자들의 재산을 압류하고 체포해라"
@@ -867,11 +867,11 @@ csa.75.a:0 "It's what Reed would have done."
 
 csa.76.t:0 "빌리 왕 만세 상영"
 csa.76.d:0 "오늘, 찰리 채플린이 다른 영화인 빌리 왕 만세를 개봉했습니다. 이 영화는 언론으로부터 빠르게 주목받았습니다. 빌리 왕 만세는 정치적 풍자 코미디 영화이자 채플린의 첫 번째 유성 영화이기도 합니다. 이 영화는 두 명의 핵심 캐릭터가 주도하는데, 한 명은 무명의 독일 이발사로써 그의 다른 영화에서 연기한 부랑자와 매우 유사합니다. 다른 캐릭터는 거드름부리며 잔혹한 광대 같은 빌리 왕으로서 명백하게 지도자를 풍자한 것이다. 이 영화는 독일 정부와 카이저를 강하게 조롱하면서 일반적인 독일 노동자의 고난을 보여줍니다. 영화는 이발사가 빌리 왕으로 오해받고 격려연설을 하면서 절정에 도달합니다. 그 영화 내 연설 통해 채플린은 좋은 미덕과 인류애를 찬양하며 사회주의에 대한 지지를 보여줍니다."
-csa.76.a:0 "채플린이 해냈습니다!“
+csa.76.a:0 "채플린이 해냈습니다!"
 
 csa.77.t:0 "가톨릭 노동자 운동"
-csa.77.d:0 "많은 수의 종교 단체들이 혁명의 여파에 대해 비난했지만, 혁명의 여파가 모든 단체들에 미친 것이 아닙니다. 그리고 이러한 집단들 중에서 가장 대중들 사이에서 주목 받는 집단이 바로 도로시 데이 동무가 이끄는 카톨릭 노동자 운동입니다. 이 운동은 기독교 사상과 사회주의적 가치간의 결합시키며 자선 행위에 대한 헌신을 중점에 두고 환대의 집을 주요한 도시부터 심지어 시골의 마을에까지 건설함으로써 인기를 얻게 되었습니다. 환대의 집은 혁명 이후 평범한 민간인적 삶으로 되돌아가려는 사람들을 지원하는 쉘터 역할을 하고 있습니다.“
-csa.77.a:0 “예수 그리스도의 공의와 자비의 말씀에 따라 살겠다."
+csa.77.d:0 "많은 수의 종교 단체들이 혁명의 여파에 대해 비난했지만, 혁명의 여파가 모든 단체들에 미친 것이 아닙니다. 그리고 이러한 집단들 중에서 가장 대중들 사이에서 주목 받는 집단이 바로 도로시 데이 동무가 이끄는 카톨릭 노동자 운동입니다. 이 운동은 기독교 사상과 사회주의적 가치간의 결합시키며 자선 행위에 대한 헌신을 중점에 두고 환대의 집을 주요한 도시부터 심지어 시골의 마을에까지 건설함으로써 인기를 얻게 되었습니다. 환대의 집은 혁명 이후 평범한 민간인적 삶으로 되돌아가려는 사람들을 지원하는 쉘터 역할을 하고 있습니다."
+csa.77.a:0 "예수 그리스도의 공의와 자비의 말씀에 따라 살겠다."
 
 csa.78.t:0 "Grapes of Wrath Primer"
 csa.78.d:0 "Today the film Grapes of Wrath premiered in theaters today. The film is based on the book of the same name and follows the Joad family, a family from Oklahoma and their troubles during the Depression prior to the revolution. It does deviate from the book with the ending on a much more hopeful and optimistic tone and shows the family working to help out with the revolution overthrow their California work camp. The film has been well regarded by both critics and the public as a necessary edit."
