특수기호수정

--- a/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
@@ -329,10 +329,10 @@ mittelpolitic.6.a:0 "상황이 나빠지는군..."
 
 ### Events ###
 mittel.1.t:0 "모잠비크 동향"
-mittel.1.d:0 "대전기 동안, 아프리카의 상황은 실로 모순적이었습니다. 동아프리카에서의 전쟁은 교착상태로 끝났고, 협상국이 독일령 동아프리카를 점령하였으며, 우리는 모잠비크를 점령하고 있었습니다. 양측 모두 수천의 아프리카인들을 짐꾼으로, 무장 경비병으로, 병사로 ‘적지’에서 모집하였으며, 전후 우리는 협상국 편에 선 자들을 처벌해야 했었습니다. 이제 그들은 모잠비크 국경을 거쳐 분산 배치되었으며 그곳엔 포르투갈의 신생 극단 정부가 그들을 우리에게 대항하도록 무장시키려는 계획을 하고 있다는 많은 루머가 존재하고 있습니다."
+mittel.1.d:0 "대전기 동안, 아프리카의 상황은 실로 모순적이었습니다. 동아프리카에서의 전쟁은 교착상태로 끝났고, 협상국이 독일령 동아프리카를 점령하였으며, 우리는 모잠비크를 점령하고 있었습니다. 양측 모두 수천의 아프리카인들을 짐꾼으로, 무장 경비병으로, 병사로 '적지’에서 모집하였으며, 전후 우리는 협상국 편에 선 자들을 처벌해야 했었습니다. 이제 그들은 모잠비크 국경을 거쳐 분산 배치되었으며 그곳엔 포르투갈의 신생 극단 정부가 그들을 우리에게 대항하도록 무장시키려는 계획을 하고 있다는 많은 루머가 존재하고 있습니다."
 mittel.1.a:0 "우리는 준비해야 한다."
 mittel.2.t:0 "모잠비크 동향"
-mittel.2.d:0 "대전기 동안, 아프리카의 상황은 실로 모순적이었습니다. 동아프리카에서의 전쟁은 교착상태로 끝났고, 협상국이 독일령 동아프리카를 점령하였으며, 독일은 우리의 모잠비크를 점령하고 있었습니다. 양측 모두 수천의 아프리카인들을 짐꾼으로, 무장 경비병으로, 병사로 ‘적지’에서 모집하였으며, 전후 독일 훈족들은 우리 편에 가담한 토착민들에게 잔인한 보복 공격을 진행하였습니다. 그 이후로, 수천명의 토착민들은 모잠비크 국경으로 도망쳐 이제는 거점에서 거주하고 있습니다. 이 토착민들 대부분은 훈족들이 그들에게 한 행동에 대해 복수하기를 원하니, 이를 이용하는 것은 중앙아프리카에 악재를 일으킬 좋은 기회가 될 것입니다."
+mittel.2.d:0 "대전기 동안, 아프리카의 상황은 실로 모순적이었습니다. 동아프리카에서의 전쟁은 교착상태로 끝났고, 협상국이 독일령 동아프리카를 점령하였으며, 독일은 우리의 모잠비크를 점령하고 있었습니다. 양측 모두 수천의 아프리카인들을 짐꾼으로, 무장 경비병으로, 병사로 '적지’에서 모집하였으며, 전후 독일 훈족들은 우리 편에 가담한 토착민들에게 잔인한 보복 공격을 진행하였습니다. 그 이후로, 수천명의 토착민들은 모잠비크 국경으로 도망쳐 이제는 거점에서 거주하고 있습니다. 이 토착민들 대부분은 훈족들이 그들에게 한 행동에 대해 복수하기를 원하니, 이를 이용하는 것은 중앙아프리카에 악재를 일으킬 좋은 기회가 될 것입니다."
 mittel.2.a:0 "계획을 해 보자..."
 mittel.3.t:0 "우리의 정당한 영토에서 벌어질 악재의 기회"
 mittel.3.d:0 "모잠비크에 있는 수용소에 분산 거주하는 분노한 토착민들을 무장시킴으로써 중앙아프리카 내에 불안정성을 유도할 좋은 기회가 있습니다. 중앙아프리카가 불안정할수록, 우리의 분홍 지도에 보이는 정당한 우리의 영토를 되찾을 기회가 증가할 것입니다."
@@ -348,13 +348,13 @@ mittel.6.t:0 "세번째로 경찰이 총에 맞다!"
 mittel.6.d:0 "비극이 다르 에스 살람에도 닥쳤습니다! 이번에도, 현재 세번째인, 경찰관은 마콘데 부족인에 의해 총을 맞았습니다. 다르에스살람 경찰은 살인범과 공격의 이유를 찾고 있으며; 포르투갈인의 연관이 의심되고 있습니다."
 mittel.6.a:0 "세상에!"
 mittel.7.t:0 "플랜테이션이 불타다!"
-mittel.7.d:0 "은자사트의 캐슈 플랜테이션이 포르투갈 국경을 넘나들면서 활동하는 ‘강도’들에게 불타버렸습니다. 그들은 최근 수확된 작물들을 최대한 약탈했으며, 여분을 모두 불태운 뒤 포르투갈령 모잠비크로 도망갔습니다."
+mittel.7.d:0 "은자사트의 캐슈 플랜테이션이 포르투갈 국경을 넘나들면서 활동하는 '강도’들에게 불타버렸습니다. 그들은 최근 수확된 작물들을 최대한 약탈했으며, 여분을 모두 불태운 뒤 포르투갈령 모잠비크로 도망갔습니다."
 mittel.7.a:0 "조치가 취해져야 한다!"
 mittel.8.t:0 "군사 보급창이 약탈당하다!"
-mittel.8.d:0 "이 ‘강도’들은 우리 아스카리들의 명성 높은 위대함을 더 이상 무서워하지도 않습니다! 그들은 우리의 군사 보급창 하나를 습격하고 보급품을 약탈한 뒤 모잠비크에 존재하는 그들의 기지로 탈출했습니다."
+mittel.8.d:0 "이 '강도’들은 우리 아스카리들의 명성 높은 위대함을 더 이상 무서워하지도 않습니다! 그들은 우리의 군사 보급창 하나를 습격하고 보급품을 약탈한 뒤 모잠비크에 존재하는 그들의 기지로 탈출했습니다."
 mittel.8.a:0 "포르투갈은 이를 끝내야 한다!"
 mittel.9.t:0 "포르투갈은 이를 멈추어야 한다!"
-mittel.9.d:0 "우리는 포르투갈에 정식으로 항의를 보내야 합니다. 이 지속적인 ‘강도’ 기지의 존재는 우리 식민지에 위협임이 뚜렷합니다. 그들이 소수의 강도를 처리할 수 없다면, 그들은 식민 지배를 할 그릇이 되지 못할 것입니다."
+mittel.9.d:0 "우리는 포르투갈에 정식으로 항의를 보내야 합니다. 이 지속적인 '강도’ 기지의 존재는 우리 식민지에 위협임이 뚜렷합니다. 그들이 소수의 강도를 처리할 수 없다면, 그들은 식민 지배를 할 그릇이 되지 못할 것입니다."
 mittel.9.a:0 "포르투갈 영사를 소환하라! 우린 스스로 이를 처리할 것이다!"
 mittel.9.b:0 "우리는 이 사건들 모두 베를린에 가져가야 한다!"
 mittel.10.t:0 "아프리카에서의 문제"
@@ -393,7 +393,7 @@ mittel.1401.t:0 "We Must Step Down"
 mittel.1401.d:0 "Having engaged with the German government about the issue, we have no choice but to follow their request and stand down with our attacks."
 mittel.1401.a:0 "We will not forget this."
 mittel.15.t:0 "중앙아프리카가 우리의 식민지를 위협하다"
-mittel.15.d:0 "다르에스살람의 독일인들이 그들 영토 내의 반군에 대한 우리의 지원을 인지하고, 이제 그들은 우리에게 반군들을 해산시키기를 요구하면서 그러지 않을 경우 ‘결과를 맞이할 것’이라 하였습니다. 어떻게 대처해야 할까요?"
+mittel.15.d:0 "다르에스살람의 독일인들이 그들 영토 내의 반군에 대한 우리의 지원을 인지하고, 이제 그들은 우리에게 반군들을 해산시키기를 요구하면서 그러지 않을 경우 '결과를 맞이할 것’이라 하였습니다. 어떻게 대처해야 할까요?"
 mittel.15.a:0 "훌륭하군, 아마도 1918년의 복수를 할 수 있을 것이다!"
 mittel.15.b:0 "선택권이 없다, 루가-루가(동아프리카 비정규군)를 해산하라, 필요하다면 무력을 동원해서라도"
 mittel.16.t:0 "포르투갈이 반군들을 해산하다!"
@@ -487,17 +487,17 @@ mittel.41.d:0 "포르투갈은 우리의 군을 포르벡스란트에서 패배 
 mittel.41.a:0 "우리의 항복을 제안한다"
 mittel.41.b:0 "우린 항복하지 않는다!"
 mittel.42.t:0 "중앙아프리카가 항복하다!"
-mittel.42.d:0 "독일 약골들은 우리의 영광스런 군대에 의해 패배했습니다! 우리는 마침내 1918년의 복수를 하였으며 ‘분홍 지도’상의 우리가 오랫동안 갈망하던 최고의 염원을 실현할 수 있게 되었습니다. 포르벡스란트와 은자사란트를 요구하는 것은, 새로운 포르투갈 제국의 시작입니다!
+mittel.42.d:0 "독일 약골들은 우리의 영광스런 군대에 의해 패배했습니다! 우리는 마침내 1918년의 복수를 하였으며 '분홍 지도’상의 우리가 오랫동안 갈망하던 최고의 염원을 실현할 수 있게 되었습니다. 포르벡스란트와 은자사란트를 요구하는 것은, 새로운 포르투갈 제국의 시작입니다!
 mittel.42.a:0 "포르투갈 만세!"
 mittel.43.t:0 "케냐타-졸프 추문"
 mittel.43.d:0 "흔하지 않은 사건이 독일의 최고 법정에 도달하였습니다. 반-식민주의 행동가 조모 케냐타가 전 아프리카 총독이었던 빌헬름 졸프에게 집단 소송을 걸었기 때문입니다. 이 사건은 곧 추문으로 변질되었는데, 원고들 중 몇몇은 대전의 참전자였으며, 이는 쉽게 무시될 수 없게 되었습니다. 그들은 졸프의 통치 동안 불법적인 영토 압류와 함께 심지어 납치 고문을 진행했으며 이는 졸프의 지식과 희미한 법적 뒷받침을 통해 수행되어 그들에게 피해를 입혔다고 주장했습니다. 놀랍게도, 외무성은 정부에 이런 일들은 우리의 식민 통치를 위해서는 흔하며 필요하다며 설명했습니다. 그들은 우리에게 이 움직임을 잠재울 것을 강하게 권고합니다."
 mittel.43.a:0 "이 법정에서 중앙아프리카의 일을 처벌할 권리는 없다."
 mittel.43.b:0 "더 끔찍한 일이 벌어질 수 있겠는가?"
 mittel.44.t:0 "케냐타-졸프 추문"
-mittel.44.d:0 "재앙입니다! 우리는 조모 케냐타의 소송 과정을 초조한 예상과 함께 몇 년 동안 지켜보았으며, 이제 우리의 최악의 공포가 실체화되었습니다. 전 총독이였던 빌헬름 졸프는 총독의 지위에서 ‘초법적’인 행위를 한 책임이 있음이 증명되었습니다. 이 충격은 졸프에게 파괴적일 뿐만 아니라, 이론적으로 무한한 사건들을 향한 문을 열었습니다. 이미, 폰 괴링 총독은 시위 중 사임하였습니다. 이 여파로, 사법적 개혁과 조금 더 ‘정상화’된 아프리카의 통치가 유일한 방법으로 간주되고 있으며, 테오도르 폰 하셀만이 운전대를 잡고 개혁을 진행하기를 기꺼이 받아들이고 있으니, 그에게 신의 가호가 있기를."
+mittel.44.d:0 "재앙입니다! 우리는 조모 케냐타의 소송 과정을 초조한 예상과 함께 몇 년 동안 지켜보았으며, 이제 우리의 최악의 공포가 실체화되었습니다. 전 총독이였던 빌헬름 졸프는 총독의 지위에서 '초법적’인 행위를 한 책임이 있음이 증명되었습니다. 이 충격은 졸프에게 파괴적일 뿐만 아니라, 이론적으로 무한한 사건들을 향한 문을 열었습니다. 이미, 폰 괴링 총독은 시위 중 사임하였습니다. 이 여파로, 사법적 개혁과 조금 더 '정상화’된 아프리카의 통치가 유일한 방법으로 간주되고 있으며, 테오도르 폰 하셀만이 운전대를 잡고 개혁을 진행하기를 기꺼이 받아들이고 있으니, 그에게 신의 가호가 있기를."
 mittel.44.a:0 "하나님이 함께 하기를"
 mittel.45.t:0 "케냐타-졸프 추문"
-mittel.45.d:0 "우리의 행정부는 키쿠유 변호사가 이끄는 전 총독 빌헬름 졸프에 대한 집단 소송인 케냐타-졸프 추문의 진행을 초조한 예상과 함께 지켜보았습니다. 운좋게도 변호인 칼 슈미트는 훌륭한 변호를 선보였고, 그는 새로운 판례: “통치자는 예외적 상황에서 결정한다.”를 구성해 냈습니다. 법원은 이 주장을 받아들였는데, 즉 총독은 아프리카에서 자주적 권한을 보유하며, 그리고 정상적인 사법적 진행을 ‘벗어날 수 있는’ 권리를 지니고 있음을 인정한 것입니다. 이는 명확히 영향을 끼치고 있으며, 우리 행정부의 몇몇 구성원은 이미 열정적으로 ‘지배적 총독’을 고대하고 있습니다."
+mittel.45.d:0 "우리의 행정부는 키쿠유 변호사가 이끄는 전 총독 빌헬름 졸프에 대한 집단 소송인 케냐타-졸프 추문의 진행을 초조한 예상과 함께 지켜보았습니다. 운좋게도 변호인 칼 슈미트는 훌륭한 변호를 선보였고, 그는 새로운 판례: “통치자는 예외적 상황에서 결정한다.”를 구성해 냈습니다. 법원은 이 주장을 받아들였는데, 즉 총독은 아프리카에서 자주적 권한을 보유하며, 그리고 정상적인 사법적 진행을 '벗어날 수 있는’ 권리를 지니고 있음을 인정한 것입니다. 이는 명확히 영향을 끼치고 있으며, 우리 행정부의 몇몇 구성원은 이미 열정적으로 '지배적 총독’을 고대하고 있습니다."
 mittel.45.a:0 "통치자는 예외적 상황에서 결정하는 자이다."
 mittel.46.t:0 "검은 서류"
 mittel.46.d:0 "익명의 중앙아프리카 내 장교와 행정가들이 총독 폰 괴링의 불법적 행동의 증거와 기록물들을 정리한 뒤 내각에 제출하였습니다. 증거가, 만일 진실이라면, 매우 심각한 것입니다. 그들이 제기한 것에 따르면, 총독 폰 괴링은 너그럽게 그에게 제공한 정부 예산을 미틀오이로파 내 정치가들을 매수하면서 자신의 통치에 대한 지원을 확고화 하였으며, 요청된 정부 공식 예산을 비자금을 조직하는 데에 활용하였습니다. 더욱 암담하게도, 자료는 증거가 부족하기는 하지만, 폰 괴링과 그의 충성파들은 그의 피고용인을 협박하기 위해 정보를 수집하며, 이는 납치와 언론가 협박, 심지어 암살자의 고용에도 연관되어 있음을 제기합니다!"
@@ -525,7 +525,7 @@ mittel.52.t:0 "베를린에 있는 친구들"
 mittel.52.d:0 "우리의 불만을 품은 행정가들 몇몇이 독일 내각에 폰 괴링을 우회하여 독일 내각에 직접 괴링의 사임을 시도하였습니다. 운이 좋게도, 베를린에 있는 친구들은 내각이 지금은 행동을 취하지 않을 것이라 장담했습니다, 지금 당장은 말입니다."
 mittel.52.a:0 "우리들 중에 반역자가 있지만, 베를린에 친구가 있다."
 mittel.53.t:0 "언론가들"
-mittel.53.d:0 "정부의 우리 친구들이 혐의를 해결하는 동안, 사건은 언론에 새나갔습니다. 총독의 명예는 실추당했으며, 이는 아프리카를 방해하며 ‘또 다른 E.D 모렐’을 꿈꾸는 수많은 언론가들에게 힘을 보탰습니다."
+mittel.53.d:0 "정부의 우리 친구들이 혐의를 해결하는 동안, 사건은 언론에 새나갔습니다. 총독의 명예는 실추당했으며, 이는 아프리카를 방해하며 '또 다른 E.D 모렐’을 꿈꾸는 수많은 언론가들에게 힘을 보탰습니다."
 mittel.53.a:0 "모두에게 저주를!"
 mittel.54.t:0 "새로운 총독"
 mittel.54.d:0 "폰 괴링이 떠났으므로, 우리는 새로운 총독을 뽑아야 한다. 그가 실각 당했음에도, 식민지에 질서를 불러 올 신 식민 정부에 대한 희망이 있습니다. 아니면, 아마도 고전적 방법인, 독일 식민 단체를 최상의 방식이라 옹호할 수 도 있습니다. 아니면 마지막으로, 개혁만이 이와 같은 행동을 방지할 마지막 방법일 수도 있습니다."
@@ -538,13 +538,13 @@ mittel.55.a:0 "유명한 작가이자 군인인 에른스트 융어!"
 mittel.55.b:0 "노장군 프란츠 리터 폰 에프를 보내라"
 mittel.55.c:0 "아프리카의 사업적 이익을 지킬 프리츠 티센을 보내라"
 mittel.56.t:0 "신임 총독"
-mittel.56.d:0 "카이저께서는 우리의 새로운 총독으로 에른스트 융어 소장을 임명하였습니다. 대전기의 복무를 통해 Pour le Mérite를 받았으며, 융어는 르네상스 맨으로 여겨집니다. 그는 그의 베스트 셀러인 “강철의 폭풍”을 통해 성공한 작가이자, 그가 아프리카에서 머무는 동안 많은 종을 발견하고 분류한 능력있는 곤충학자이며, 그러는 동안 우리의 아스카리들에게 ‘강습병 전략’을 가르쳤습니다. 융어는 20세기 중반 일련의 군사 저작물로 인한 독일 군부와의 분쟁 이후로 군부와의 관계를 끊었습니다. \n\n그의 시각을 참모부에 반영할 수 없었으므로, 그는 그의 현대 전장에서 정신력의 중요성에 대한 이론을 각인하는 데 더 자유로운 아프리카로의 재배치를 신청했습니다. 신 식민 정부의 멤버로서, 에른스트 융어는 그가 “새로운 탐험 정신”이라 말하는 것을 아프리카의 개척에 가져올 것이며, 우리의 보병 전략을 개혁하는 데에도 도움을 줄 것입니다."
+mittel.56.d:0 "카이저께서는 우리의 새로운 총독으로 에른스트 융어 소장을 임명하였습니다. 대전기의 복무를 통해 Pour le Mérite를 받았으며, 융어는 르네상스 맨으로 여겨집니다. 그는 그의 베스트 셀러인 “강철의 폭풍”을 통해 성공한 작가이자, 그가 아프리카에서 머무는 동안 많은 종을 발견하고 분류한 능력있는 곤충학자이며, 그러는 동안 우리의 아스카리들에게 '강습병 전략'을 가르쳤습니다. 융어는 20세기 중반 일련의 군사 저작물로 인한 독일 군부와의 분쟁 이후로 군부와의 관계를 끊었습니다. \n\n그의 시각을 참모부에 반영할 수 없었으므로, 그는 그의 현대 전장에서 정신력의 중요성에 대한 이론을 각인하는 데 더 자유로운 아프리카로의 재배치를 신청했습니다. 신 식민 정부의 멤버로서, 에른스트 융어는 그가 '새로운 탐험 정신'이라 말하는 것을 아프리카의 개척에 가져올 것이며, 우리의 보병 전략을 개혁하는 데에도 도움을 줄 것입니다."
 mittel.56.a:0 "새로운 총독을 경배하라!"
 mittel.57.t:0 "신임 총독"
 mittel.57.d:0 "카이저께서는 우리의 새로운 총독으로 프란츠 리터 폰 에프를 임명하였습니다. 퇴역한 장군이자 현 정치가인 리터 폰 에프는 헤레로 반란과 뒤이은 진압에서 싸웠으며 대전기의 복무를 통해 Pour le Mérite를 얻었습니다. 전후 루덴도르프 수상은 그를 최초의 전후 카메룬 행정관으로 임명했습니다. 3년간의 행정관 업무 후 독일로 돌아왔으며, 리터 폰 에프는 정치가로 변신해 몇몇 애국적 신문사 창립에 자금을 지원했으며, Bavarian chamber of Imperial Counsellors에 종사하였습니다. 리터 폰 에프는 그의 루덴도르프의 독재정과의 강한 연관을 숨기려 한 적이 없었으며, 활발히 발언하는 루덴도르프의 옹호자로 남아있습니다. 그는 논란이 많고, 적대적이지만, 카이저께서는 아프리카에는 투사가 필요하다고 결정하셨습니다. 신 식민 정부의 지원가로써, 프란츠 리터는 수년간의 군사 복무 경험과 봉사를 그의 직위에서 보여줄 것입니다."
 mittel.57.a:0 "아프리카에 오신 것을 환영합니다, 폰 에프"
 mittel.58.t:0 "신임 총독"
-mittel.58.d:0 "카이저께서 우리의 새로운 총독으로 프리츠 티센을 임명하였습니다. 유나이티드 제철의 주인인, 티센은 독일 상업계에서 우뚝 솟은 명사이며, 제국은행의 중역과 독일 제철, 제강산업 협회의 수장을 맡고 있습니다. 그는 정치적으로도 활발한데, 우익정당과 우파 신문에 금융 지원을 제공합니다. 하지만 그는 고임금과 노동자의 권익 보장에 적극적으로 지원하면서 우파계열과 관계를 끊었습니다. 그는 과거 비스마르크가 그랬듯이, 사회주의는 노동자들의 기본 생활수준을 보장함으로써 막을 수 있다고 믿습니다. 티센은 고임금을 받은 노동자가 더 많은 독일제 물건을 사고, 경제를 활성화시킴으로 그것이 이익이 될 것이라 주장합니다. 몇몇은 그의 노동자의 고임금이 산업 상품을 구입하고 충성심을 형성하는 이 모델을 ‘티센주의’라 한다. 프리츠 티센은 신 식민 정부와 오랫동안 협력하였으며, 폰 괴링의 정치적 등장을 돕기 위해 자금을 지원했다는 의혹이 돌고 있으며, 어쩌면 ‘검은 서류’에 제기됐었던 비자금 구성에 연루됐을지도 모릅니다. 이 문제 제기들 중 어느 것도 증명되지 않았고 카이저께서 그를 콩고에서의 광산 산출량 증대에 관한 특별한 경력을 우대하여 총독으로 임명하였습니다."
+mittel.58.d:0 "카이저께서 우리의 새로운 총독으로 프리츠 티센을 임명하였습니다. 유나이티드 제철의 주인인, 티센은 독일 상업계에서 우뚝 솟은 명사이며, 제국은행의 중역과 독일 제철, 제강산업 협회의 수장을 맡고 있습니다. 그는 정치적으로도 활발한데, 우익정당과 우파 신문에 금융 지원을 제공합니다. 하지만 그는 고임금과 노동자의 권익 보장에 적극적으로 지원하면서 우파계열과 관계를 끊었습니다. 그는 과거 비스마르크가 그랬듯이, 사회주의는 노동자들의 기본 생활수준을 보장함으로써 막을 수 있다고 믿습니다. 티센은 고임금을 받은 노동자가 더 많은 독일제 물건을 사고, 경제를 활성화시킴으로 그것이 이익이 될 것이라 주장합니다. 몇몇은 그의 노동자의 고임금이 산업 상품을 구입하고 충성심을 형성하는 이 모델을 '티센주의’라 한다. 프리츠 티센은 신 식민 정부와 오랫동안 협력하였으며, 폰 괴링의 정치적 등장을 돕기 위해 자금을 지원했다는 의혹이 돌고 있으며, 어쩌면 '검은 서류'에 제기됐었던 비자금 구성에 연루됐을지도 모릅니다. 이 문제 제기들 중 어느 것도 증명되지 않았고 카이저께서 그를 콩고에서의 광산 산출량 증대에 관한 특별한 경력을 우대하여 총독으로 임명하였습니다."
 mittel.58.a:0 "아프리카에 오신 것을 환영합니다, 티센."
 mittel.59.t:0 "독일 식민 단체 총독"
 mittel.59.d:0 "The old guard ensured stability, and order for Africa, if not the kind of radical change that people had hoped for. After this last crisis, we need someone who knows Africa intimately, and will lead it in a responsible fashion."
