--- a/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
@@ -129,7 +129,7 @@ VICTORY_POINTS_1273:0 "고아"
 VICTORY_POINTS_1278:0 "우파"
 VICTORY_POINTS_1315:0 "타와이" #다웨이
 VICTORY_POINTS_1319:0 "쿤밍"
-VICTORY_POINTS_1323:0 "세인트 조지"
+VICTORY_POINTS_1323:0 "세인트조지"
 VICTORY_POINTS_1330:0 "양곤" #랑군
 VICTORY_POINTS_1349:0 "봄베이"
 VICTORY_POINTS_1352:0 "토피카"
@@ -242,7 +242,7 @@ VICTORY_POINTS_3140:0 "티흐빈"
 VICTORY_POINTS_3150:0 "던디"
 VICTORY_POINTS_3151:0 "페트로그라드"
 VICTORY_POINTS_3152:0 "레발"
-VICTORY_POINTS_3211:0 "덴하그"
+VICTORY_POINTS_3211:0 "덴하흐"
 VICTORY_POINTS_3230:0 "프워츠크"
 VICTORY_POINTS_3273:0 "글래스고"
 VICTORY_POINTS_3284:0 "포트오브스페인"
@@ -532,7 +532,7 @@ VICTORY_POINTS_6788:0 "제노아"
 VICTORY_POINTS_6790:0 "파르마"
 VICTORY_POINTS_6794:0 "옐리스타"
 VICTORY_POINTS_6831:0 "페스카라"
-VICTORY_POINTS_6845:0 "필라데피아"
+VICTORY_POINTS_6845:0 "필라델피아"
 VICTORY_POINTS_6855:0 "콜럼버스"
 VICTORY_POINTS_6880:0 "파루"
 VICTORY_POINTS_6882:0 "뉴어크"
